--- a/_posts/2015-06-07-搭建自己的博客.md
+++ b/_posts/2015-06-07-搭建自己的博客.md
@@ -144,11 +144,11 @@ vim-addon-manager install mkd
 
 ### 配置~/.vim/vimrc
 在~/.vim/vimrc文件的末尾添加下面的markdown设置
-> "-- markdown --
-  let g:vim_markdown_folding_disabled=1	"取消代码折叠
-  let g:vim_markdown_no_default_key_mappings=1	"取消默认的键对应
-  let g:vim_markdown_math=1		"使用数学符号
-  let g:vim_markdown_frontmatter=1	"高亮YMAL frontmatter
+> "-- markdown --</br>
+> let g:vim_markdown_folding_disabled=1	"取消代码折叠</br>
+> let g:vim_markdown_no_default_key_mappings=1	"取消默认的键对应</br>
+> let g:vim_markdown_math=1		"使用数学符号</br>
+> let g:vim_markdown_frontmatter=1	"高亮YMAL frontmatter
 
 ## 后记
 经过上面基本的配置,可以得到非常简单明了的博客,但是并不是很美观.所以后面一篇博文[给博文添加自定义主题]()讲述如何给博客添加主题.
