--- a/_posts/2013-09-08-简单批处理内部命令.md
+++ b/_posts/2013-09-08-简单批处理内部命令.md
@@ -20,12 +20,14 @@ Sample：
 @echo off / echo hello world
 {% endhighlight %}
 
-rem命令
+
+## rem命令
 注释命令，类似于在C语言中的/*--------*/，它并不会被执行，只是起一个注释的作用，只有在编辑批处理时才会被看到，主要用于方便修改。
 
 Usage：
+{% highlight batch linenos %}
 rem [context]
-
+{% endhighlight %}
 Sample:
 rem 注释内容
 注意点：
