--- a/_posts/2013-09-08-简单批处理内部命令.md
+++ b/_posts/2013-09-08-简单批处理内部命令.md
@@ -12,88 +12,113 @@ comment:	true
 打开回显或关闭请求回显功能，或显示消息。如果没有任何参数，echo 命令将显示当前回显设置。
 
 Usage：
-{% highlight batch linenos %}
+
+```batch 
 echo [{on　off}] [message]
-{% endhighlight %}
+```
 Sample：
-{% highlight batch linenos %}
+
+```batch
 @echo off / echo hello world
-{% endhighlight %}
+```
 
 
 ## rem命令
-注释命令，类似于在C语言中的/*--------*/，它并不会被执行，只是起一个注释的作用，只有在编辑批处理时才会被看到，主要用于方便修改。
+注释命令，类似于在C语言中的/\*--------\*/，它并不会被执行，只是起一个注释的作用，只有在编辑批处理时才会被看到，主要用于方便修改。
 
 Usage：
-{% highlight batch linenos %}
+
+```batch
 rem [context]
-{% endhighlight %}
+```
 Sample:
+
+```batch
 rem 注释内容
-注意点：
+```
+> **注意**</br>
+> :: 也具有rem的功能，区别如下：</br>
+> 当关闭回显时,rem和::都不显示注释内容;</br>
+> 当打开回显时,rem会显示注释内容,而::却不显示注释内容</br>
 
-:: 也具有rem的功能，区别如下：
 
-回显	
-rem
-
-::
-
-关闭	不显示注释内容	不显示注释内容
-打开	显示注释内容	不显示注释内容
- 
-
-pause命令
+## pause命令
 暂停命令。运行 Pause 命令时，将显示下面的消息：
 
+```batch
 Press any key to continue. . .（或：请按任意键继续. . .)
-
+```
  
-
-call 命令
-从一个批处理程序调用另一个批处理程序，并且不终止父批处理程序。call命令接受用作调用目标的标签。如果在脚本或批处理文件外使用Call，它将不会在命令行起作用。
+## call 命令
+_从一个批处理程序调用另一个批处理程序，并且不终止父批处理程序_.call命令接受用作调用目标的标签。如果在脚本或批处理文件外使用Call，它将不会在命令行起作用。
 
 Usage：
+
+```batch
 call [[Drive:][Path] FileName [BatchParameters]]
 [:label [arguments]]
-
+```
 Sample：
+
+```batch
 call file.bat
-start 命令
+```
+
+
+## start 命令
 调用外部程序，所有的DOS命令和命令行程序都可以由start命令来调用。
 
 Usage：
-start FileName [BatchParameters]
 
-Parameters:
-MIN        开始时窗口最小化
-SEPARATE   在分开的空间内开始 16 位 Windows 程序
-HIGH       在HIGH 优先级类别开始应用程序
-REALTIME   在 REALTIME 优先级类别开始应用程序
-WAIT       启动应用程序并等候它结束
+```batch
+start FileName [BatchParameters]
+```
+> **Parameters:**</br>
+> MIN        开始时窗口最小化</br>
+> SEPARATE   在分开的空间内开始 16 位 Windows 程序</br>
+> HIGH       在HIGH 优先级类别开始应用程序</br>
+> REALTIME   在 REALTIME 优先级类别开始应用程序</br>
+> WAIT       启动应用程序并等候它结束
 
 Sample:
+
+```batch
 start calc.exe
-goto命令
+```
+
+
+## goto命令
 跳转命令。程序指针跳转到指定的标签，从标签后的第一条命令开始继续执行批处理程序。
 
 Usage:
-goto label
 
-Sample:
-:label
-start
+```batch
 goto label
-set命令
+```
+Sample:
+
+```batch
+:label
+start a.exe
+goto label
+```
+
+
+## set命令
 显示、设置或删除变量。
 
 Sample:
-显示变量
-set    显示批处理当前已定义的所有变量及其值
-set s    显示所有以s开头的变量及其值
 
-设置变量
-set a=hjy    把变量a定义为hjy。用echo %a%来回显
+```batch
+rem 把变量a定义为hjy。用echo %a%来回显
+set a=hjy 
 
-删除变量
-set a=    删除变量a
+rem 删除变量a
+set a=
+
+rem 显示所有以s开头的变量及其值
+set s	 
+rem 显示批处理当前已定义的所有变量及其值
+set 
+```
+
