--- a/_posts/2015-06-07-搭建自己的博客.md
+++ b/_posts/2015-06-07-搭建自己的博客.md
@@ -14,12 +14,12 @@ comments: true
 1.  在GitHub上创建仓库(haojunyu.github.com)
 2.  在本地克隆仓库
 
-	```bash
+	{% highlight bash linenos %}
 	git clone https://github.com/haojunyu/haojunyu.github.com
-	```
+	{% endhighlight%}
 3. 创建index.html文件
 
-	```bash
+	```bash 
 	cd haojunyu.github.com
 	echo "hello world"  > index.html
 	```
