--- a/_posts/2013-09-09-简单批处理之符号简介.md
+++ b/_posts/2013-09-09-简单批处理之符号简介.md
@@ -1,8 +1,8 @@
 ---
 layout:	default
-title:	简单批处理符号简介
+title:	简单批处理之符号简介
 category:	batch
-comment:	true
+comments:	true
 ---
 本文主要介绍在批处理中常用的符号.
 
@@ -11,12 +11,12 @@ comment:	true
 ## 回显@
 表示不显示@后面的命令
 
-Sample：
+* Sample：
 
-```batch
-@echo off
-@echo Now initializing the program,please wait a minite...
-```
+	```batch
+	@echo off
+	@echo Now initializing the program,please wait a minite...
+	```
 
 ## 重定向>与>>
 将输出信息重定向到指定的设备或文件。系统默认输出到显示器。
