--- a/_posts/2013-09-10-简单批处理之常用命令.md
+++ b/_posts/2013-09-10-简单批处理之常用命令.md
@@ -1,8 +1,8 @@
 ---
 layout:	default
-title:	简单批处理常用命令
+title:	简单批处理之常用命令
 category:	batch
-comment:	true
+comments:	true
 ---
 本文主要介绍批处理的常用命令,这里只是简单介绍命令的作用,至于命令的具体用法,可以通过 `command /?` 或 `command --help`查看.
 
@@ -39,10 +39,10 @@ comment:	true
 * reg	注册表控制台工具
 * powercfg	控制系统上的电源设置
 
-> **注意**></br>
-> 查看命令的帮助信息用 `command /?` 或 `command --help`
-> 
-> ```batch
-> rem 查看at命令的帮助文档
-> at /?
-> ```
+	> **注意**   
+	> 查看命令的帮助信息用 `command /?` 或 `command --help`  
+	>
+	> ```batch
+	> rem 查看at命令的帮助文档
+	> at /?
+	> ```
