--- a/_posts/2015-06-07-搭建自己的博客.md
+++ b/_posts/2015-06-07-搭建自己的博客.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: markdown+jekyll+github搭建博客
-category: tool
+category: ubuntu
 comments: true
 ---
 本文主要介绍自己博客的搭建,其中github作为博客存放的服务端,jekyll是用来管理博客,其会将md,html博文渲染上主题并以html形式显示在浏览器上,而markdown作为一种标记性语言,简单易学.
