--- a/_posts/2014-12-03-python基础篇之介绍.md
+++ b/_posts/2014-12-03-python基础篇之介绍.md
@@ -48,4 +48,6 @@ This material was created by Nick Parlante working in the engEDU group at Google
 	if __name__ == '__main__':
 		main()
 	```
-
+	> **注意:**  
+	> 代码第一行`#!/usr/bin/python`是当使用./scrpt.py执行该段程序时指定解释器的路径. 显然这里是linux的路径,windows可以换成`#!C:\Python2.7`
+	> 
