--- a/_posts/2014-12-10-python基础篇之正则表达式.md
+++ b/_posts/2014-12-10-python基础篇之正则表达式.md
@@ -52,3 +52,18 @@ comments:	true
 * `\t\n\r`		匹配制表符,换行符,回车符
 * `\d`			匹配数字,等价于[0-9]
 * `^ $`			`^`匹配开头,`$`匹配结尾
+
+## 重复模式
+* `+`			匹配至少有一个和左边相同的字符构成的串.eg 'i+'匹配i/ii/iii etc
+* `*`			匹配0个或多个和左边相同的字符构成的串.eg 'i*'匹配 /i/ii/iii etc
+* `?`			匹配0个或一个和左边相同的字符.eg 'i?'匹配/i
+
+	> **注意:**  
+	> `+`和`*`都是尽可能多的匹配字符串
+
+## 特殊符号
+* `[]`			代表单个字符,这个字符是属于[]中的元素
+* `()`			()中匹配的字符串构成的一个group，可以通过match.group(i)提取第i个组合
+
+## 课后习题
+* 练习题: [babynames.py]({{ site.baseurl }}/assets/attachs/babynames.py.txt)  [baby2006.html]({{ site.baseurl }}/assets/attachs/baby2006.html.txt)
