--- a/_posts/2015-07-15-ACM算法之约数个数原理.md
+++ b/_posts/2015-07-15-ACM算法之约数个数原理.md
@@ -5,3 +5,24 @@ category:	ACM
 comments:	true
 ---
 在数论里面除了老生常谈的素数问题，还有一个就是约数个数问题。对于这个问题的解法可能还停留在用n除以 $1,\cdots,\sqrt n$，然后统计能够整除的个数。其时间复杂度为 $O(\sqrt n)$。本文主要介绍约数个数定理以及它在实际题目中的应用。
+
+
+
+## 约数个数原理
+
+### 原理  
+对于一个大于1的正整数n，n可以因式分解为
+$$
+n = \prod _{ i = 1 } ^k p _i ^{ a _i } = p _1 ^{ a _1 } * \cdots * p _k ^{ a _k } 
+$$,
+其中$ p _i $是质数，$ a _i \in N $，那么n的约数个数就是
+$$
+f ( n ) = \prod _{ i = 1 } ^k ( a _i + 1) = ( a _i + 1) * \cdots *( a _k + 1 )
+$$。
+
+### 简证  
+因为$ p _i $都是质数，无法再进行因式分解，所以任意$ p _i $的组合都可以构成一个约数，对于质数$ p _i $有$ (a _i) $种可能，分别是 $ 0,1,\cdots,a _i $，那么对于k个$ p _i $共有 $ \prod _{i=1}^k (a _i +1) $种可能的组合。
+
+## 代码实现
+skdfjalkfd
+lskdfj
