--- a/_posts/2015-07-15-ACM算法之约数个数原理.md
+++ b/_posts/2015-07-15-ACM算法之约数个数原理.md
@@ -10,7 +10,7 @@ comments:	true
 
 ## 约数个数原理
 
-### 原理  
+* 原理  
 对于一个大于1的正整数n，n可以因式分解为
 $$
 n = \prod _{ i = 1 } ^k p _i ^{ a _i } = p _1 ^{ a _1 } * \cdots * p _k ^{ a _k } 
@@ -18,9 +18,41 @@ $$,
 其中$ p _i $是质数，$ a _i \in N $，那么n的约数个数就是
 $$
 f ( n ) = \prod _{ i = 1 } ^k ( a _i + 1) = ( a _i + 1) * \cdots *( a _k + 1 )
-$$。
+$$
 
-### 简证  
+* 简证  
 因为$ p _i $都是质数，无法再进行因式分解，所以任意$ p _i $的组合都可以构成一个约数，对于质数$ p _i $有$ (a _i) $种可能，分别是 $ 0,1,\cdots,a _i $，那么对于k个$ p _i $共有 $ \prod _{i=1}^k (a _i +1) $种可能的组合。
 
 ## 代码实现
+* 思路  
+要求解一个整数n的约数个数$ f(n) $，其关键就是通过因式分解获取各个质数的指数。不过通常情况下，我们无法获取比n小的质数有哪些（$ 10^{16} $以内的质数有个，所以数目还是可观的。）这里我们通过n不断除以除数m，$ m \in {2,3,5,7,9,\cdots} $，如果能够整除的话，就更新n为$ n/m $，这样虽然除数里面有9这样的合数，但经过除以2次3后，9将会不被更新后的n整除，所以实际的情况还是除以质数。
+
+* c++代码  
+
+	```c++
+	// 快速计算n的约数个数
+	int NumOfFac(long long n){
+		unsigned int i,k,count=1;
+		long long m=n;
+		while(m!=1){
+			for(i=2; i<=m; i+=2){
+				if(m % i == 0){
+					k=1;
+					while(m % i == 0){
+						k++;
+						m = m / i;
+					}
+				count = count*k;
+				}
+			// 2,3,5,7,11...避开2->3之间差1
+			if(i == 2)
+				i--;
+			}
+		}
+		return count;
+	}
+	```
+
+## 解题报告
+* HihoCoder
+	1. divisors: [divisors](http://hihocoder.com/contest/mstest2015july1/problem/2) | [源码]()
