--- a/_posts/2014-03-07-ACM编程技巧之常用字符操作函数.md
+++ b/_posts/2014-03-07-ACM编程技巧之常用字符操作函数.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	ACM编程技巧之常用字符操作函数
-category:	ACM
+category:	ACM_CODING
 comments:	true
 ---
 编程里面最常用的操作就是字符操作,能够熟练的对字符进行操作对后面的编程非常有利.
