--- a/_posts/2015-06-30-ACM算法之基本并查集.md
+++ b/_posts/2015-06-30-ACM算法之基本并查集.md
@@ -1,8 +1,7 @@
 ---
 layout:	default
 title:	ACM算法之基本并查集
-category:   ACM
-
+category:   ACM_ALGORITHM
 comments:   true
 ---
 并查集是一种用途广泛的数据结构，能够快速地处理集合的合并和查询问题，并且实现起来非常方便，在很多场合中都有着非常巧妙的应用。本文首先介绍并查集的定义、原理及具体实现，然后结合hihocoder以及poj上的题目做一些具体实践。
