--- a/_posts/2015-07-15-ACM算法之约数个数原理.md
+++ b/_posts/2015-07-15-ACM算法之约数个数原理.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	ACM算法之约数个数原理
-category:	ACM
+category:	ACM_ALGORITHM
 comments:	true
 ---
 在数论里面除了老生常谈的素数问题，还有一个就是约数个数问题。对于这个问题的解法可能还停留在用n除以 $1,\cdots,\sqrt n$，然后统计能够整除的个数。其时间复杂度为 $O(\sqrt n)$。本文主要介绍约数个数定理以及它在实际题目中的应用。
@@ -21,7 +21,7 @@ f ( n ) = \prod _{ i = 1 } ^k ( a _i + 1) = ( a _i + 1) * \cdots *( a _k + 1 )
 $$
 
 * 简证  
-因为$ p _i $都是质数，无法再进行因式分解，所以任意$ p _i $的组合都可以构成一个约数，对于质数$ p _i $有$ (a _i) $种可能，分别是 $ 0,1,\cdots,a _i $，那么对于k个$ p _i $共有 $ \prod _{i=1}^k (a _i +1) $种可能的组合。
+因为$ p _i $都是质数，无法再进行因式分解，所以任意$ p _i $的组合都可以构成一个约数，对于质数$ p _i $有$ (a _i+1) $种可能，分别是 $ 0,1,\cdots,a _i $，那么对于k个$ p _i $共有 $ \prod _{i=1}^k (a _i +1) $种可能的组合。
 
 ## 代码实现
 * 思路  
@@ -55,4 +55,12 @@ $$
 
 ## 解题报告
 * HihoCoder
-	1. divisors: [divisors](http://hihocoder.com/contest/mstest2015july1/problem/2) | [源码]()
+	1. divisors: [divisors](http://hihocoder.com/contest/mstest2015july1/problem/2) | [源码]({{ site.baseurl }}/assets/attachs/hiho_divisors.cpp.txt) | [报告细节]({{ site.baseurl }}/acm_report/2015/07/23/ACM解题报告之最大约数个数.html)
+
+		注意点：
+		1. 暴力求解(==遍历比n小的数，依次求解每个数的约数个数==)是行不通的。
+		2. 合理利用约数个数原理，并对其进行优化求解。
+			
+			> **TIPS:**  
+			> 最终求解的拥有最大约数个数的数一定满足下面的推论：  
+			> 若$p _1 < p _2 <  \cdots < p _k$,则$a _1 > a _2 > \cdots > a _k$
