--- a/_posts/2015-08-04-搭建日志分析系统ELK.md
+++ b/_posts/2015-08-04-搭建日志分析系统ELK.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	快速部署日志分析系统ELK
-category:	ubuntu
+category:	ubuntu_ops
 comments:	true
 ---
 日志分析系统ELK是三个开源软件的缩写，分别是Elasticsearch，Logstash，Kibana。其中Elasticsearch是用来实现索引和搜索功能的目的，Logstash是一个很灵活的日志收集和处理工具。Kibana是和Elasticsearch配套的图形展示界面，用于方便的展示数据和分析数据。本文对整个套件的安装配置过程作了记录，并写了一键安装配置的脚本。
@@ -93,7 +93,49 @@ comments:	true
 	sudo update-rc.d logstash defaults 94 11
 	```
 	
-## 安装k
+## 安装Kabana
+1. 下载kibana软件
+	
+	```bash
+	wget -O /tmp/kibana.tar.gz https://download.elasticsearch.org/kibana/kibana/    kibana-4.0.1-linux-x64.tar.gz
+	```
+2. 解压到/opt/kibana
+
+	```bash
+	sudo tar xvf /tmp/kibana.tar.gz -C /opt/
+	sudo mv /opt/kibana-4.0.1-linux-x64 /opt/kibana
+	```
+3. 配置kibana[向/opt/kibana/config中添加配置文件]
+
+	```bash
+	sudo cp ./kibana.yml /opt/kibana/config/
+	sudo cp ./kibana4 /etc/init.d/
+	```
+4. 启动kibana服务器
+	
+	```bash
+	sudo service kibana4 restart
+	```
+5. 设置kibana4开机启动，比elasticsearch启动慢，关闭快
+
+	```bash
+	sudo update-rc.d kibana4 defaults 96 9
+	```
+
+## 安装反向代理工具Nginx
 
 
- 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
