--- a/_posts/2015-08-04-搭建日志分析系统ELK.md
+++ b/_posts/2015-08-04-搭建日志分析系统ELK.md
@@ -21,7 +21,7 @@ comments:	true
 		sudo apt-get install redis-server
 		```
 
-## Elasticsearch安装与配置
+## Elasticsearch安装
 1. 导入GPG key
 	
 	```bash
@@ -56,7 +56,7 @@ comments:	true
 	sudo update-rc.d elasticsearch defaults 95 10
 	```
 
-## Logstash的安装和配置
+## Logstash的安装
 1. 添加logstash到源中
 	
 	```bash
@@ -122,11 +122,35 @@ comments:	true
 	sudo update-rc.d kibana4 defaults 96 9
 	```
 
-## 安装反向代理工具Nginx
+## 反向代理工具Nginx
+1. 安装nginx和apache2-utils[有apache的web服务器内置工具，如htpasswd]
+	
+	```bash
+	sudo apt-get -y install nginx apache2-utils
+	```
+2. 创建kibanaadmin用户来访问kibana网络接口，密码为kibanaadmin
+
+	```bash
+	sudo htpasswd -bc /etc/nginx/htpasswd.users kibanaadmin kibanaadmin
+	```
+3. 配置nginx[/etc/nginx/sites-available/default]
+	
+	```bash
+	sudo cp ./default /etc/nginx/sites-available/
+	```
+4. 重启nginx服务
+	
+	```bash
+	sudo service nginx restart
+	```
+
+## 构建SSL证书
+目前还没有走通。
 
 
-
-
+## 一键安装脚本
+1. 多台机器协作
+	* 服务端脚本[indexer.sh]({{site.baseurl}}/assets/attachs/indexer.sh.txt)
 
 
 
