--- a/_posts/2015-08-04-搭建日志分析系统ELK.md
+++ b/_posts/2015-08-04-搭建日志分析系统ELK.md
@@ -73,12 +73,16 @@ comments:	true
 	sudo apt-get install logstash
 	```
 4. 配置logstash[向/etc/logstash/conf.d/文件夹中添加配置文件]
+	* 单机配置[single.conf]({{site.baseurl}}/assets/attachs/single.conf.txt)
+	* 服务器端配置[indexer.conf]({{site.baseurl}}/assets/attachs/indexer.conf.txt)
+	* 客户端配置[shipper.conf]({{site.baseurl}}/assets/attachs/shipper.conf.txt)
+	* 其他配置 [inputs.conf]({{site.baseurl}}/assets/attachs/inputs.conf.txt) | [filters.conf]({{site.baseurl}}/assets/attachs/filters.conf.txt) | [outputs.conf]({{site.baseurl}}/assets/attachs/outputs.conf.txt) | [nginxlog_json.conf]({{site.baseurl}}/assets/attachs/nginxlog_json.conf.txt) & [ifo_nginx.conf]({{site.baseurl}}/assets/attachs/ifo_nginx.conf.txt) | [ifo_collectd.conf]({{site.baseurl}}/assets/attachs/ifo_collectd.conf.txt) | [ifo_syslog.conf]({{site.baseurl}}/assets/attachs/ifo_syslog.conf.txt)
 
 	```bash
 	# 单机配置
 	sudo cp ./single.conf /etc/logstash/conf.d
 	# 服务端配置
-	sudo cp ./center.conf /etc/logstach/conf.d
+	sudo cp ./shipper.conf /etc/logstach/conf.d
 	# 客户端配置
 	sudo cp ./shipper.conf /etc/logstash/conf.d
 	```
@@ -151,6 +155,9 @@ comments:	true
 ## 一键安装脚本
 1. 多台机器协作
 	* 服务端脚本[indexer.sh]({{site.baseurl}}/assets/attachs/indexer.sh.txt)
+	* 客户端脚本[shipper.sh]({{site.baseurl}}/assets/attachs/shipper.sh.txt)
+2. 单机独立运行
+	* 独立脚本[single.sh]({{site.baseurl}}/assets/attachs/single.sh.txt)
 
 
 
