--- a/_posts/2015-08-25-ACM解题报告之最长回文子串.md
+++ b/_posts/2015-08-25-ACM解题报告之最长回文子串.md
@@ -16,7 +16,32 @@ comments:	true
 1. 暴力求解  
 暴力求解的方法分两步，第一步是得到字符串所有的子串（$n\times(n+1)/2$个），第二步是判断每一个子串是否是回文子串（$n/2$比较操作），如果是则记录下长度，不是则舍弃。
 
-2. 枚举优化  
+2. 动态优化  
+这里的动态优化说白了就是一种空间还时间的解法。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 假定n以内的所有质数为$ p _1, \cdots , p _k $,那么对于n有$$ n = \prod _{i=1}^k p _i^{a _i} = p _1^{a _1} * \cdots * p _k^{a _k} $$,其中$ a _i \in [ 0, \lfloor \log _{p _i} n \rfloor ] $，这个就是约数个数原理。通过对这k个$ a _i $的自由组合我们能够**枚举**n以内所有的数。
 而本题要求的是正整数n的约数个数最多并且n尽量小。该目的就是我们**优化**或**剪枝**$ a _i $组合的出发点。
 	* 约数个数最多  
