--- a/_posts/2015-08-25-ACM解题报告之最长回文子串.md
+++ b/_posts/2015-08-25-ACM解题报告之最长回文子串.md
@@ -4,7 +4,7 @@ title:	ACM解题报告之最长回文子串
 category:	ACM_REPORT
 comments:	true
 ---
-题目很简单，就是求解一个字符串中最长的回文子串，回文字符串是指颠倒之后的字符串和原来的字符串完全一样。网上很多人的博文，像[kangroger](http://blog.csdn.net/kangroger/article/details/37742639),还有把最牛b的Manacher算法说得很清晰的[yzl_rex](http://blog.csdn.net/yzl_rex/article/details/7908259)，介绍了四种解法：分别是暴力法（$O(n^3)$），动态规划（$O(n^2)$），中心扩展（$O(n^2)$）和Manache法（$O(n)$）。本博文只是对这四种方法的自我实现。
+题目很简单，就是求解一个字符串中最长的回文子串，回文字符串是指颠倒之后的字符串和原来的字符串完全一样。网上很多人的博文，像[kangroger](http://blog.csdn.net/kangroger/article/details/37742639),还有把最牛b的Manacher算法说得很清晰的[pi9nc](http://blog.csdn.net/pi9nc/article/details/9251455)和[yzl_rex](http://blog.csdn.net/yzl_rex/article/details/7908259)，介绍了四种解法：分别是暴力法（$O(n^3)$），动态规划（$O(n^2)$），中心扩展（$O(n^2)$）和Manache法（$O(n)$）。本博文只是对这四种方法的自我实现。
 
 
 ## 题目
@@ -14,160 +14,93 @@ comments:	true
 
 ## 思路
 1. 暴力求解  
-暴力求解的方法分两步，第一步是得到字符串所有的子串（$n\times(n+1)/2$个），第二步是判断每一个子串是否是回文子串（$n/2$比较操作），如果是则记录下长度，不是则舍弃。
+暴力求解的方法分两步，第一步是得到字符串所有的子串（$n\times(n+1)/2$个），第二步是判断每一个子串是否是回文子串（$n/2$比较操作），如果是则记录下长度，不是则舍弃。所以暴力求解方法的时间复杂度为$O(n^3)$。
 
 2. 动态优化  
-这里的动态优化说白了就是一种空间还时间的解法。
+这里的动态优化说白了就是一种空间换时间的解法。其具体的做法就是在一个二维数组dp中记录下i到j是否是回文，即dp[i][j]=1/0,那么要判断dp[m][n]是否是回文就得看$ dp[m-1][n-1] = 1 \&\& buf[m] = [n] $。由于要填充这样$n^2$的二维数组，所以动态优化解法的时间复杂度$O(n^2)$。
 
+3. 中心扩展  
+中心扩展的思路很简单，就是以字符串中某个字符为中心，然后向两边对称扩展，判断最边缘字符是否相等，以此来统计回文子串的长度。不过这里面要注意回文子串的长度可能为偶数，也就是说它以两个字符的中间为对称中心。所以要分两种情况考虑，总的来说，中心扩展方法的时间复杂度为$O(n^2)$。
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-假定n以内的所有质数为$ p _1, \cdots , p _k $,那么对于n有$$ n = \prod _{i=1}^k p _i^{a _i} = p _1^{a _1} * \cdots * p _k^{a _k} $$,其中$ a _i \in [ 0, \lfloor \log _{p _i} n \rfloor ] $，这个就是约数个数原理。通过对这k个$ a _i $的自由组合我们能够**枚举**n以内所有的数。
-而本题要求的是正整数n的约数个数最多并且n尽量小。该目的就是我们**优化**或**剪枝**$ a _i $组合的出发点。
-	* 约数个数最多  
-	对于正整数n的约数个数$ f(n)= \prod _{i=1}^k (a _i+1) $,而要使$ f(n)$更大，那么$a _i$值要大并且$ a _i == 0 $的数目要少，这样乘积才会更大，当然此时n也会更大，这里$ a _i $是质数$ p _i $的指数。这里的冲突点在于当要给某个$ a _i $增加值时，是给小的$p _i$增加个大值还是给大的$p _i$增加个小值。简单的例子如下：对于4这个整数，乘上19和2^4得到的$f(76)=6,f(64)=7$，而对于8这个整数，乘上19和2^4得到的$f(152)=8,f(128)=8$，再对于16这个整数，乘上19和2^4得到的$f(304)=10,f(256)=9$。该冲突让我们考虑到底要用哪些$p _i$来构成这个约数个数最多的数。经过计算质数$[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43]$依次相乘为$1.3 \times 10^{16}$。显然对于正整数$N < 10^{16}$以内约数个数最多的数n一定是由上面的14个质数组成。
-
-		> **剪枝条件1：**  
-		> 对于正整数$N < 10^{16}$以内约数个数最多的数n一定是由这[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43]14个质数组成。
-		>> **简要证明**  
-		>> 假设最终的n中有约数大于43的质数$p _k$，其中$n<N$,那么上面的质数组里必定有一个质数$p _j$的指数为0,不然n一定会超出N。那么此时用$p _j$代替$p _k$一定会获得比n更小的值$n'$，那么n并不是最终的n，这和假设矛盾。  
-	* n尽量小  
-	当约数个数相同的时候，会取n最小的那个正整数。这也就意味着此时k个$a _i$的取值已经确定了，但是每个$a _i$对应的质数$p _j$还没有确定（$i,j \in [0,k]$），不同的组合会构成不同的数，但是最小的正整数只能有一种组合，那就是最大的$a _i$对应最小的$p _j$。所以我们获得了另一个剪枝的条件。
-		
-		> **剪枝条件2：**  
-		> 最终求解的拥有最大约数个数的数n一定满足：  
-		> 若$p _1 < p _2 < \cdots < p _k$，则$a _1 > a _2 > \cdots > a _k$。
+4. Manacher算法  
+你猜测的没，该算法就是这个叫Manacher的人想出的算法，用于解决最长回文子串问题，其时间复杂度能达到$O(n)$。该算法的核心思想是充分利用回文字符串的对称性，即利用前面已经算得的对称半径减少或直接求取当前要求的对称半径。下个部分将详细解释该算法。
 
 ## 算法说明
-1. 剪枝条件1的应用
-定义静态常量数组，用来存放这14个质数
-	
-	```c
-	static const int little_prime[] = { 
-	2,3,5,7,11,13,17,19,23,29,
-	31,37,41,43};
-	```
-	
-2. 递归函数的声明
-函数功能是当第len位质数加入后，寻找约数个数最多的最小正整数
-，其参数如下:  
-	* N	-- 	输入要寻找的N范围内
-	* n	--	求解的n
-	* counts	--	约数的个数
-	* len	--	第len个质数
-	* maxTimes	--	第len个质数的最大指数
-	
-	```c
-	void FindMinN(long long N, long long n, int counts, int len, int maxTimes);
-	```
+这里主要说明动态规划算法和Manacher算法。重点在Mancher算法，而动态规划算法只是提一下其中二维数组的动态申请。
+### 动态规划算法
+1. 二维数组的动态申请用c实现的步骤：--
+    1. 申请一个长度为len的指针数组(int **)dp，用来存放二维数组每行的首地址。
+    2. 给dp[0]申请一个len*len的数组，用于存放具体数据。
+    3. 给dp[i]赋上二维数组每行首地址。
+    4. $\cdots$
+    5. 释放数组dp[0]
+    6. 释放指针数组dp
+2. 代码演示
+    ```c
+    // 动态申请二位数组并初始化
+    int **dp = (int **)malloc(sizeof(int *) * len);
+    dp[0] = (int *)malloc(sizeof(int) * len * len);
+    for(i=1; i<len; i++)
+        dp[i] = dp[i-1] + len;
 
-3. 函数内部解析
-	* numOfMinN	--	全局变量，用来存储当前所找数中约数最多的值
-	* minN	--	全局变量，用来存储当前所有数中最小的n
+    // 释放申请的二位数组
+    free(dp[0]);
+    free(dp);
+    ```
+### Mancher算法
+1. 假设--
+为解释清楚Manacher算法，作如下假定：  
+    * 所有的回文子串的数目都是奇数（通过向字符首尾和字符间插入特殊字符集'#'实现）
+    * 辅助数组radius用来存储对称半径。即radius[i]表示以第i个字符为中心构成的回文子串的半径。像字符串“#a#”的回文半径为1。
+2. 符号说明--
+如下图所示，我们要根据回文字符串buf和radius[0]～radius[i-1]来求取radius[i]。
+![manacher]({{site.baseurl}}/assets/images/manacher.png)
+ 图中符号说明如下：  
+    * id表示以前i个字符中第id个字符为中心构成的回文子串最右边字符的索引值最大，即$id = argmax(radius[k]+k),k<i$。易知$ id<i $。
+    * mx表示以第id个字符为中心构成的回文子串最右边字符的索引值，即$mx = radius[id]+id, id<i $。
+    * j是i关于id的对称点，即$ j = 2 * id - i $。
 
-	```c
-	// 当第len位质数加入后，寻找约数个数最多的最小正整数
-	void FindMinN(long long N, long long n, int counts, int len, int maxTimes){
-	    // 当找到约数个数更多或者约数个数相同但数更小的直接更新
-		// update
-	    if(counts > numOfMinN || (counts == numOfMinN && minN > N)){
-	        numOfMinN = counts;
-	        minN = n;
-	    }
+3. 分情况讨论  
+    1. ==$ mx < i$==  
+    此时radius的前i个值不起任何作用，就像初始时根据radius[0]=0求解radius[1]，此时id=0,mx=0。
+        ```c
+        if(mx<i){
+            k=1;
+            // 以i为中心，回文子串的半径
+            while(newbuf[i-k]==newbuf[i+k]&&i-k>=0&&i+k<len)
+                k++;
+            radius[i]=k-1;
+        }
+        ```
+    2. ==$ mx > i $==--
+        1. ==$ mx-i >= radius[j] $==--
+        $mx-i$代表i到mx的距离，而radius[j]就是图中绿线的一半距离。如果$mx-i > radius[j]$说明$radius[i]=radius[j]$，因为$[2*id-mx,mx]是关于id对称的，而i和j也是关于id对称的。
+            ```c
+            if(mx-i >= radius[j])
+                radius[i]=radius[j];
+            ```
+        2. ==$ mx-i < radius[j]$ ==--
+        此时我们根据对称性，能够获得$radius[i]>=radius[j]$的。所以我们直接从mx+1开始判断$buf[mx+t]==buf[2*i-mx-t],t=1,2,\cdots$。
+            ```c
+            if(mx-i<radius[j]){
+                k=mx-i+1;
+                // 以i为中心，回文子串的半径从mx-i+1开始验证
+                while(newbuf[i-k]==newbuf[i+k]&&i-k>=0&&i+k<len)
+                    k++;
+                radius[i]=k-1;
+            }
+            ```
+4. 情况融合
+仔细思考一下，发现第二种情况里面的两种情况可以融合，说白点就是取图中i到mx的距离和图中一半绿线距离中的最小值，即$radius[i]=min(radius[j],mx-i)$。然后再进行向外扩展，看radius[i]能否更大。
+    ```c
 
-		// find
-		int i;
-		// 遍历第len位质数，其指数为1,2，。。。，maxTimes
-		for(i=1; i<=maxTimes; i++){
-			n = n * little_prime[len];
-			if(ans > N)
-				break;
-			// 遍历第len+1位质数，其指数的最大值为i -- 剪枝条件2
-			FindMinN(N, n, counts*(i+1), len+1, i);
-		}
-	}
-	```
+    ```
 
-4. [完整代码]({{site.baseurl}}/assets/attachs/hiho_divisors.cpp.txt)
+
+4. [完整代码]({{site.baseurl}}/assets/attachs/1032.cpp.txt)
 
 ## 举一反三
-1. k维数组的遍历  
-对本题的另一种解读是n维数组的遍历。这里每个$p _i$算一个维度，在每个维度上有$a _i+1$个可能的值。对这k个维度的遍历就是对比N小的正整数的依次判别。  
-	* 代码说明  
-	
-		```c
-		// 每个维度取值个数
-		int varMax[]={
-		10,9,8,7,6,
-		5,4,3,2,1};
-		// 第ind维度取值的情况
-		void TraversalByRecu(int dim, int ind, int max, int var[]){
-			// 取完dim个维度打印输出
-			if(ind>=dim){
-				for(int j=0; j<dim; j++){
-					printf("%d\t",var[j]);
-				}
-				printf("\n");
-				return;
-			}   
-		    int i;
-			// 第ind维度取完所有可能的取值
-			for(i=1;i<=max;i++){
-				var[ind]=i;
-				// 取第ind+1维度，并设定第ind+1维度取值个数
-				TraversalByRecu(dim,ind+1,varMax[ind+1],var);
-			}   
-		}
-		```
-	* [完整代码]({{site.baseurl}}/assets/attachs/hiho_divisors_travel.cpp.txt)
-
-2. 区间里约数个数最大的尽量小的数
-对于这个问题，其实和N以内很类似，唯一的区别可能就是在更新的时候要判断当前的n在不在区间范围内。  
-	* 代码说明
-	
-		```c
-		void FindMinN(long long low, long long high, long long n, int counts, int len, int maxTimes){
-		    // update
-			if(n<=high && n>=low){
-				if(counts > numOfMinN || (counts == numOfMinN && minN > n)){
-					numOfMinN = counts;
-					minN = n;
-				}
-			}   
-		    // find
-		    int i;
-		    for(i=1; i<=maxTimes; i++){
-			    n = n * little_prime[len];
-			    if(n > high)
-				    break;
-				    FindMinN(low, high, n, counts*(i+1), len+1, i); 
-			}   
-		}
-		```
-	* [完整代码]({{site.baseurl}}/assets/attachs/hiho_divisors_depart.cpp.txt)
-	
-	
-	
+无
 
 
 
