--- a/_posts/2015-08-25-ACM解题报告之最长回文子串.md
+++ b/_posts/2015-08-25-ACM解题报告之最长回文子串.md
@@ -28,7 +28,7 @@ comments:	true
 ## 算法说明
 这里主要说明动态规划算法和Manacher算法。重点在Mancher算法，而动态规划算法只是提一下其中二维数组的动态申请。
 ### 动态规划算法
-1. 二维数组的动态申请用c实现的步骤：--
+1. 二维数组的动态申请用c实现的步骤：
     1. 申请一个长度为len的指针数组(int **)dp，用来存放二维数组每行的首地址。
     2. 给dp[0]申请一个len*len的数组，用于存放具体数据。
     3. 给dp[i]赋上二维数组每行首地址。
@@ -36,6 +36,7 @@ comments:	true
     5. 释放数组dp[0]
     6. 释放指针数组dp
 2. 代码演示
+
     ```c
     // 动态申请二位数组并初始化
     int **dp = (int **)malloc(sizeof(int *) * len);
@@ -47,15 +48,16 @@ comments:	true
     free(dp[0]);
     free(dp);
     ```
+
 ### Mancher算法
-1. 假设--
+1. 假设  
 为解释清楚Manacher算法，作如下假定：  
     * 所有的回文子串的数目都是奇数（通过向字符首尾和字符间插入特殊字符集'#'实现）
     * 辅助数组radius用来存储对称半径。即radius[i]表示以第i个字符为中心构成的回文子串的半径。像字符串“#a#”的回文半径为1。
-2. 符号说明--
+2. 符号说明  
 如下图所示，我们要根据回文字符串buf和radius[0]～radius[i-1]来求取radius[i]。
-![manacher]({{site.baseurl}}/assets/images/manacher.png)
- 图中符号说明如下：  
+![manacher]({{site.baseurl}}/assets/images/manacher.png)  
+图中符号说明如下：  
     * id表示以前i个字符中第id个字符为中心构成的回文子串最右边字符的索引值最大，即$id = argmax(radius[k]+k),k<i$。易知$ id<i $。
     * mx表示以第id个字符为中心构成的回文子串最右边字符的索引值，即$mx = radius[id]+id, id<i $。
     * j是i关于id的对称点，即$ j = 2 * id - i $。
@@ -63,6 +65,7 @@ comments:	true
 3. 分情况讨论  
     1. ==$ mx < i$==  
     此时radius的前i个值不起任何作用，就像初始时根据radius[0]=0求解radius[1]，此时id=0,mx=0。
+        
         ```c
         if(mx<i){
             k=1;
@@ -72,15 +75,17 @@ comments:	true
             radius[i]=k-1;
         }
         ```
-    2. ==$ mx > i $==--
-        1. ==$ mx-i >= radius[j] $==--
+    2. ==$ mx > i $==  
+        1. ==$ mx-i >= radius[j] $==  
         $mx-i$代表i到mx的距离，而radius[j]就是图中绿线的一半距离。如果$mx-i > radius[j]$说明$radius[i]=radius[j]$，因为$[2*id-mx,mx]是关于id对称的，而i和j也是关于id对称的。
+            
             ```c
             if(mx-i >= radius[j])
                 radius[i]=radius[j];
             ```
-        2. ==$ mx-i < radius[j]$ ==--
-        此时我们根据对称性，能够获得$radius[i]>=radius[j]$的。所以我们直接从mx+1开始判断$buf[mx+t]==buf[2*i-mx-t],t=1,2,\cdots$。
+        2. ==$ mx-i < radius[j]$==  
+        此时我们根据对称性，能够获得$radius[i]>=radius[j]$的。所以我们直接从mx+1开始判断$buf[mx+t]\==buf[2*i-mx-t],t=1,2,\cdots$。
+            
             ```c
             if(mx-i<radius[j]){
                 k=mx-i+1;
@@ -90,14 +95,31 @@ comments:	true
                 radius[i]=k-1;
             }
             ```
-4. 情况融合
+4. 情况融合  
 仔细思考一下，发现第二种情况里面的两种情况可以融合，说白点就是取图中i到mx的距离和图中一半绿线距离中的最小值，即$radius[i]=min(radius[j],mx-i)$。然后再进行向外扩展，看radius[i]能否更大。
-    ```c
 
+    ```c
+    radius[0]=0;
+    for(i=1; i<len; i++){
+        if(mx>i){
+            if(radius[j]<mx-i)
+                radius[i]=radius[j];
+            else
+                radius[i]=mx-i;
+        }else{
+            radius[i]=1;
+        }
+        for(;newbuf[i+radius[i]]==newbuf[i-radius[i]]&&i+radius[i]<len&&i-radius[i]>=0;radius[i]++);
+        // 更新id，mx
+        if(radius[i]+i>mx){
+            id=i;
+            mx=radius[i]+i;
+        }
+    }
     ```
 
 
-4. [完整代码]({{site.baseurl}}/assets/attachs/1032.cpp.txt)
+4. [完整代码]({{site.baseurl}}/assets/attachs/1032.c.txt)
 
 ## 举一反三
 无
