--- a/_posts/2013-09-08-简单批处理之内部命令.md
+++ b/_posts/2013-09-08-简单批处理之内部命令.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	简单批处理之内部命令
-category:	batch
+category:	Batch
 comments:	true
 ---
 批处理(Batch)，也称为批处理脚本。顾名思义，批处理就是对某对象进行批量的处理，通常被认为是一种简化的脚本语言，它应用于DOS和Windows系统中。批处理文件的扩展名为bat 。本文主要介绍批处理比较常用的内部命令.
