--- a/_posts/2013-09-10-简单批处理之常用命令.md
+++ b/_posts/2013-09-10-简单批处理之常用命令.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	简单批处理之常用命令
-category:	batch
+category:	Batch
 comments:	true
 ---
 本文主要介绍批处理的常用命令,这里只是简单介绍命令的作用,至于命令的具体用法,可以通过 `command /?` 或 `command --help`查看.
