--- a/_posts/2013-09-14-简单批处理之众里find它一次度.md
+++ b/_posts/2013-09-14-简单批处理之众里find它一次度.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	简单批处理之众里find它一次度
-category:	batch
+category:	Batch
 comments:	true
 ---
 在批处理的过程中,经常需要查找文件以及在文件中查找相关字符串.在linux中有`grep`,`awk`,`sed`等命令,不过windows里面也有类似的命令,如这次介绍的`find`,`findstr`.
