--- a/_posts/2014-02-26-shell编程之基本内容.md
+++ b/_posts/2014-02-26-shell编程之基本内容.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	shell编程之基本内容
-category:	shell
+category:	Shell
 comments:	true
 ---
 在windows里面进行任务处理通常是用批处理,但是其功能是单薄的.而且一般公司服务器都是用的linux系统,批处理是没有用武之地的,关键时候还是shell给力.其实说白了,shell编程就是linux命令的组合.
