--- a/_posts/2014-02-27-shell编程之语法结构.md
+++ b/_posts/2014-02-27-shell编程之语法结构.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	shell编程之语法结构
-category:	shell
+category:	Shell
 comments:	true
 ---
 前一篇博文介绍了shell编程的基本内容,主要介绍了变量,数值计算以及字符串.这些相当于食材,而本文介绍的语法结构就相当于食谱,二者组合方能做出美食.
