--- a/_posts/2014-02-28-shell编程之常用命令.md
+++ b/_posts/2014-02-28-shell编程之常用命令.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	shell编程之常用命令
-category:	shell
+category:	Shell
 comments:	true
 ---
 shell编程说白了就是常用命令和语法结构的自由组合.所以本文将粗略介绍一下常用的命令以及其用法.
