--- a/_posts/2014-02-29-shell编程之实用脚本片段.md
+++ b/_posts/2014-02-29-shell编程之实用脚本片段.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	shell编程之实用脚本片段
-category:	shell
+category:	Shell
 comments:	true
 ---
 现在编程都讲究面向对象,处理的对象不再是最底层的变量,结构等.所以在日常也要注意实用脚本片段的积累.
