--- a/_posts/2014-03-05-ACM编程技巧之代码片段.md
+++ b/_posts/2014-03-05-ACM编程技巧之代码片段.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	ACM编程技巧之代码片段
-category:	ACM_CODING
+category:	[ACM, Coding]
 comments:	true
 ---
 ACM编程也是需要一些通用的代码片段的.熟练掌握这些代码片段可以在后面的编程中更加方便.
