--- a/_posts/2014-12-03-python基础篇之介绍.md
+++ b/_posts/2014-12-03-python基础篇之介绍.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	python基础篇之介绍
-category:	python
+category:	[Python, Google]
 comments:	true
 ---
 python基础篇是以Google for Education上面的[Google's Python Class课程](https://developers.google.com/edu/python/?csw=1)为主.这是一门非常适合初学者的课程.
