--- a/_posts/2014-12-07-python基础篇之元组和字典.md
+++ b/_posts/2014-12-07-python基础篇之元组和字典.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	python基础篇之元组和字典
-category:	python
+category:	[Python, Google]
 comments:	true
 ---
 除了list之外,python还有两个比较常用的数据结构,就是本文所介绍的元组和字典.元组其实就相当于数组.其元素的大小无法改变.
