--- a/_posts/2014-12-09-python基础篇之文件操作.md
+++ b/_posts/2014-12-09-python基础篇之文件操作.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	python基础篇之文件操作
-category:	python
+category:	[Python, Google]
 comments:	true
 ---
 python处理文件也是有一手的,所以熟练掌握文件操作对日后的任务操作非常有利.
