--- a/_posts/2014-12-10-python基础篇之正则表达式.md
+++ b/_posts/2014-12-10-python基础篇之正则表达式.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	python基础篇之正则表达式
-category:	python
+category:	[Python, Google]
 comments:	true
 ---
 初学Python，对Python的文字处理能力有很深的印象，除了str对象自带的一些方法外，就是正则表达式这个强大的模块了。关于python里面正则表达式的使用网上有很多博文,如[python正则式学习笔记](http://blog.csdn.net/whycadi/article/details/2011046)等,这里做一下自己的总结.
