--- a/_posts/2014-12-11-python基础篇之实用工具.md
+++ b/_posts/2014-12-11-python基础篇之实用工具.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	python基础篇之实用工具
-category:	python
+category:	[Python, Google]
 comments:	true
 ---
 个人觉得python越来越实用离不开其强大的模块,框架的支持,像文件模块,命令行模块,django框架,sk-learning工具箱等等.这些都让python能够非常方便的处理不同领域的问题.
