--- a/_posts/2014-12-31-Linux经久不衰的应用程序.md
+++ b/_posts/2014-12-31-Linux经久不衰的应用程序.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	linux经久不衰的应用程序
-category:	ubuntu
+category:	[Ubuntu, Software]
 comments:	true
 ---
 Linux系统里面的应用程序一贯具备高安全性和高性价比(功能/所占空间),而且它在科研领域的好软件的确要比windows里面多很多,而且功能强大很多.这里记录下Linux里面比较常用的而且经久不衰的应用程序.
