--- a/_posts/2015-05-20-shell编程之文本处理工具sed.md
+++ b/_posts/2015-05-20-shell编程之文本处理工具sed.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	shell编程之文本处理工具sed
-category:	shell
+category:	Shell
 comments:	true
 ---
 SED命令的功能同awk类似，差别在于，sed简单，对列处理的功能要差一些，awk的功能复杂，对列处理的功能比较强大，sed全称是：Stream EDitor.它主要是**以行为单位**进行处理，可以将数据行进行*替换*、*删除*、*新增*、*选取*等特定工作.特别强调一点,==sed的操作对源文件不作修改==.
