--- a/_posts/2015-05-22-shell编程之系统进程监控.md
+++ b/_posts/2015-05-22-shell编程之系统进程监控.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	shell编程之系统进程监控
-category:	shell
+category:	[Shell]
 comments:	true
 ---
 本问内容均是根据网络上一篇博文[使用shell脚本对linux系统和进程资源进行监控](http://blog.jobbole.com/22318/)对其验证学习的总结.
