--- a/_posts/2015-05-31-版本控制神器git.md
+++ b/_posts/2015-05-31-版本控制神器git.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	版本控制神器git
-category:	ubuntu
+category:	[Ubuntu, Git]
 comments:	true
 ---
 当使用git管理代码,有github帐号,至少有一个自己创建的项目出现在求职的综合加分项里时,了解git,github就应该成为一项立即,马上,现在去做的事.
