--- a/_posts/2015-07-06-shell编程之软硬链接ln.md
+++ b/_posts/2015-07-06-shell编程之软硬链接ln.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	shell编程之软硬链接ln
-category:	shell
+category:	[Shell]
 comments:	true
 ---
 在windows里面我们经常通过快捷方式来创建链接以方便我们使用电脑。而linux中有两种方式创建链接，分别为软链接和硬链接。下面我们就来详细说下二者的区别。
