--- a/_posts/2015-07-15-ACM算法之约数个数原理.md
+++ b/_posts/2015-07-15-ACM算法之约数个数原理.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	ACM算法之约数个数原理
-category:	ACM_ALGORITHM
+category:	[ACM, Algorithm]
 comments:	true
 ---
 在数论里面除了老生常谈的素数问题，还有一个就是约数个数问题。对于这个问题的解法可能还停留在用n除以 $1,\cdots,\sqrt n$，然后统计能够整除的个数。其时间复杂度为 $O(\sqrt n)$。本文主要介绍约数个数定理以及它在实际题目中的应用。
