--- a/_posts/2015-07-23-ACM解题报告之最大约数个数.md
+++ b/_posts/2015-07-23-ACM解题报告之最大约数个数.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	ACM解题报告之最大约数个数
-category:	ACM_REPORT
+category:	[ACM, Report]
 comments:	true
 ---
 本题的解法是在[约数个数原理]({{ site.baseurl }}/acm_algorithm/2015/07/15/ACM算法之约数个数原理.html)的基础上对问题进行优化，从而大大降低算法的时间复杂度。而解题的思路是从结果去想它满足什么样的条件，从而获得优化问题的方法。
