--- a/_posts/2015-08-04-搭建日志分析系统ELK.md
+++ b/_posts/2015-08-04-搭建日志分析系统ELK.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	快速部署日志分析系统ELK
-category:	ubuntu_ops
+category:	[Ubuntu, OPS]
 comments:	true
 ---
 日志分析系统ELK是三个开源软件的缩写，分别是Elasticsearch，Logstash，Kibana。其中Elasticsearch是用来实现索引和搜索功能的目的，Logstash是一个很灵活的日志收集和处理工具。Kibana是和Elasticsearch配套的图形展示界面，用于方便的展示数据和分析数据。本文对整个套件的安装配置过程作了记录，并写了一键安装配置的脚本。
