--- a/_posts/2015-08-13-集成开发工具Eclipse的配置.md
+++ b/_posts/2015-08-13-集成开发工具Eclipse的配置.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	集成开发工具Eclipse的配置
-category:	ubuntu
+category:	[Ubuntu, Software]
 comments:	true
 ---
 Eclipse是个强大的集成工具，写JAVA程序的人基本都会首选该工具，然而它的强大并不仅仅体现在对JAVA的支持上，实际上用Eclipse可以写C/C++程序以及Python代码等。当然这一切都需要安装一些插件并进行一些配置。这里就对其配置进行一些记录。
