--- a/_posts/2015-08-21-ACM算法之Trie树.md
+++ b/_posts/2015-08-21-ACM算法之Trie树.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	ACM算法之Trie树
-category:   ACM_ALGORITHM
+category:   [ACM, Algorithm]
 comments:   true
 ---
 Trie树是一种用于快速检索的多叉树结构,经常用于统计和排序大量的字符串（但又不限于字符串），所以经常被搜索引擎系统用于文本词频统计。本文首先介绍Trie树的定义、原理及具体实现，然后结合hihocoder上的题目做一些具体实践。
