--- a/_posts/2015-08-22-ACM编程技巧之常见错误.md
+++ b/_posts/2015-08-22-ACM编程技巧之常见错误.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	ACM编程技巧之常见错误
-category:	ACM_CODING
+category:	[ACM, Coding]
 comments:	true
 ---
 在ACM编程过程中，经常会碰到一些千奇百怪的编译错误。本篇博文就是对这些比较隐晦的编译错误做一下记录，以方便在今后的编程中少走些弯路。
