--- a/_posts/2015-08-25-ACM解题报告之最长回文子串.md
+++ b/_posts/2015-08-25-ACM解题报告之最长回文子串.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	ACM解题报告之最长回文子串
-category:	ACM_REPORT
+category:	[ACM, Report]
 comments:	true
 ---
 题目很简单，就是求解一个字符串中最长的回文子串，回文字符串是指颠倒之后的字符串和原来的字符串完全一样。网上很多人的博文，像[kangroger](http://blog.csdn.net/kangroger/article/details/37742639),还有把最牛b的Manacher算法说得很清晰的[pi9nc](http://blog.csdn.net/pi9nc/article/details/9251455)和[yzl_rex](http://blog.csdn.net/yzl_rex/article/details/7908259)，介绍了四种解法：分别是暴力法（$O(n^3)$），动态规划（$O(n^2)$），中心扩展（$O(n^2)$）和Manache法（$O(n)$）。本博文只是对这四种方法的自我实现。
