--- a/_posts/2015-08-31-VIM配置之基础入门级.md
+++ b/_posts/2015-08-31-VIM配置之基础入门级.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title:  Vim配置之基本入门级
-category:   ubuntu
+category:   [Ubuntu, Vim]
 comments:   true
 ---
 正所谓“工欲善其事，必先利其器”，而作为一个专业的码农，怎么能不好好对待自己编程的利器--VIM编辑器呢！可能读者会说编程的利器不应该是各种语言的集成工具么？像编写C/C++程序的VS，Codeblock（跨平台）软件，像编写Java程序的Eclipse（现在已经有支持C/C++/Python的插件），像编写Python程序的PyCharm等。这些人性化的开发集成环境功能强大，使用方便。不过成也在此，败也在此。本文将详细介绍Vim编辑器以及其基本入门级配置。
