--- a/_posts/2013-09-13-简单批处理之一切尽在at中.md
+++ b/_posts/2013-09-13-简单批处理之一切尽在at中.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	简单批处理之一切尽在at中
-category:	batch
+category:	Batch
 comments:	true
 ---
 让计算机在自己规定的时间里干自己规定的事，一切尽在计划之中。所以at命令你一定不能错过。
