--- a/_posts/2013-09-15-简单批处理之实用脚本片段.md
+++ b/_posts/2013-09-15-简单批处理之实用脚本片段.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title:	简单批处理之实用脚本片段
-category:	batch
+category:	Batch
 comments:	true
 ---
 批处理能够很便利的处理一些特定的任务,但是这些都是由基本的脚本片段构成的,所以对这些脚本片段的积累将有利于今后的任务处理.
