--- a/_posts/2014-12-04-python基础篇之基本概念.md
+++ b/_posts/2014-12-04-python基础篇之基本概念.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	python基础篇之基本概念
-category:	python
+category:	[Python, Google]
 comments:	true
 ---
 python里面有一些基本的概念,像模块,函数之类的,理解这些基本概念有利于对python程序的理解和编写.
