--- a/_posts/2014-12-05-python基础篇之字符串.md
+++ b/_posts/2014-12-05-python基础篇之字符串.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	python基础篇之字符串
-category:	python
+category:	[Python, Google]
 comments:	true
 ---
 个人感觉python对字符串的处理是非常强的,所以掌握一些python对字符串的基本操作是非常有必要的.
