--- a/_posts/2014-12-06-python基础篇之链表.md
+++ b/_posts/2014-12-06-python基础篇之链表.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	python基础篇之链表
-category:	python
+category:	[Python, Google]
 comments:	true
 ---
 链表是python里面一个很重要的数据结构,也是非常常用的一个数据结构.
