--- a/_posts/2014-12-08-python基础篇之基本语法.md
+++ b/_posts/2014-12-08-python基础篇之基本语法.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	python基础篇之基本语法
-category:	python
+category:	[Python, Google]
 comments:	true
 ---
 在基本的概念和数据结构了解完后,再了解一下基本语法来将这些零件合理的组合起来,这样就可以用python干一下复杂的任务了.
