--- a/_posts/2015-06-04-实用的写博语言markdown.md
+++ b/_posts/2015-06-04-实用的写博语言markdown.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	实用的写博语言markdown
-category:	ubuntu
+category:	[Ubuntu, Markdown]
 comments:	true
 ---
 Markdown是一种可以使用普通文本编辑器编写的标记语言,通过类似HTML的标记语法,它可以使普通文本内容具有一定的格式.用它来书写博客是非常方便的.
