--- a/_posts/2015-06-13-自定义博客主题.md
+++ b/_posts/2015-06-13-自定义博客主题.md
@@ -1,7 +1,7 @@
 ---
 layout:	default
 title:	自定义博客主题
-category: ubuntu	
+category: [Ubuntu, Blog]	
 comment: true
 ---
 房子需要装修,博客也需要装修.而通过**markdown**+**jekyll**+**github**搭建的博客是支持自定义自己的主题的.不过这需要对**html**,**javascript**,**css**有一定的了解.当然,要想自己的博客漂亮美观,自己的审美要好,显然我不具备(嘻嘻).
