--- a/_posts/2015-09-07-ACM解题报告之格雷码.md
+++ b/_posts/2015-09-07-ACM解题报告之格雷码.md
@@ -79,6 +79,7 @@ $$
         }
     }
     ```
+    [源码]({{site.baseurl}}/assets/attachs/gray.c.txt)
 2. 8421码转换到格雷码
     
     ```c
@@ -98,6 +99,7 @@ $$
         return gray;
     }
     ```
+    [源码]({{site.baseurl}}/assets/attachs/89.c.txt)
 
 ## 举一反三
 格雷码转换到8421码也可以用位运算一步解决：
