--- a/_posts/2015-09-07-ACM解题报告之格雷码.md
+++ b/_posts/2015-09-07-ACM解题报告之格雷码.md
@@ -2,7 +2,7 @@
 layout:	default
 title:	ACM解题报告之格雷码
 category:	[ACM, Report]
-comment:	true
+comments:	true
 ---
 **格雷码**（Gray Code）是指在一组数的编码中，任意两个相邻的代码只有一位二进制数不同，则称这种代码为格雷码。另外由于最大数和最小数之间也仅有一位数不同，即“首尾相连”，因此又称为**循环码***或***反射码**。这篇博文主要介绍怎样用递归的方式构造格雷码以及格雷码与8421码之间的转换。
 
