--- a/_posts/2015-09-08-刨根问底之shell里的运行环境.md
+++ b/_posts/2015-09-08-刨根问底之shell里的运行环境.md
@@ -10,14 +10,18 @@ comments:	true
 
 ## 起因
 今天在公司准备使用命令行`sudo /opt/logstash/bin/plugin install logstash-output-webhdfs`给logstash安装logstash-output-webhdfs插件，以实现将logstash收集的日志信息存储到Hadoop文件系统这一目的。但是却一直提示如下错误：
+
 > Unable to download data from https://rubygems.org/ - 连接被对端重置 (https://rubygems.global.ssl.fastly.net/latest_specs.4.8.gz)  
 > ERROR: Installation aborted, verification failed for logstash-output-webhdfs
-这里公司的上网环境是使用了代理。
 
+这里公司上网环境是使用了代理。本人在~/.bashrc中添加了`export http_proxy=xxx`和`export https_proxy=xxx`。接下来按照网上的解决方法作了如下尝试：  
+
+1. 用Google搜索错误提示[Unable to download data from https://rubygems.org][unable]
+2. [手动安装插件logstash-output-webhdfs][manual]
 
 ## 必备知识
 1. bashrc VS profile  
-在windows系统里面，经常会遇到[设置环境变量](https://www.java.com/zh_CN/download/help/path.xml)的问题，特别是安装完Java JDK之后。我们很少在黑漆漆的命令行窗口中执行命令`set path=%path%;D:\jdk\bin`,因为这样设置只会在这个命令窗口中识别`java`命令在D:\jdk\bin，重新打开一个命令窗口后将无法识别。也就是说该path只对执行那个命令的shell有效。还有两种方法是设置系统变量或用户变量。二者的区别就在于系统变量对所有用户有效，而用户变量只对当前用户有效。经实验，二者都无需重启就可以起作用。同理，linux里面对环境变量的设置和windows是共通的。它也有三种方式
+在windows系统里面，经常会遇到[设置环境变量][set_env]的问题，特别是安装完Java JDK之后。我们很少在黑漆漆的命令行窗口中执行命令`set path=%path%;D:\jdk\bin`,因为这样设置只会在这个命令窗口中识别`java`命令在D:\jdk\bin，重新打开一个命令窗口后将无法识别。也就是说该path只对执行那个命令的shell有效。还有两种方法是设置系统变量或用户变量。二者的区别就在于系统变量对所有用户有效，而用户变量只对当前用户有效。经实验，二者都无需重启就可以起作用。同理，linux里面对环境变量的设置和windows是共通的。它也有三种方式
     * 终端中设置
     执行命令`PATH=$PATH':/home/hjy/program/jdk/bin'`,同样java命令只能在当前窗口中识别，重开一个窗口java命令将无效。
     * 设置用户变量
@@ -35,9 +39,11 @@ comments:	true
     * 非交互模式  
     非交互模式就是指shell里面没有交互，像执行命令`bash -c ‘CMD’`，像运行shell脚本等。
 
-[baidu][1]
-
 ## 参考文献
-[1]:http://www.baidu.com
+1. [如何设置或更改PATH系统变量][set_env]
+2. [如何更换rubygem镜像的源][unable]
+3. [如何手动安装logstash插件logstash-output-elasticsearch-shield][manual]
 
-
+[set_env]:  https://www.java.com/zh_CN/download/help/path.xml
+[unable]:   http://www.sjsjw.com/kf_jiagou/article/027841ABA028365.asp
+[manual]:  https://discuss.elastic.co/t/shield-w-logstash-offline-install/25072
