--- a/_posts/2015-09-09-shell运行环境之环境配置文件.md
+++ b/_posts/2015-09-09-shell运行环境之环境配置文件.md
@@ -1,34 +1,14 @@
 ---
 layout:	default
-title:	刨根问底之shell里的运行环境
+title:	shell运行环境之环境配置文件
 category:	[Ubuntu, Shell]
 comments:	true
 ---
-在Ubuntu里，我们经常在终端中使用`sudo`来提权--以普通用户的身份去行使管理员的权限（前提是知道管理员用户的密码），这样减少了root用户的登录次数和管理时间，也提高了系统的安全性。不过有时候我们会直接用`su`切换到管理员进行一系列操作。本篇博文就是总结`sudo`，`su`对bash运行环境的影响。明白了这点，你将明白在公司里怎样使用代理。
+[上一篇博文]({{site.baseurl}}/2015/09/08/shell运行环境之环境变量.html)介绍了shell运行环境中三种不同的环境变量--临时变量，用户变量和系统变量，除此之外还有/etc/environment，/etc/profile和～/.profile作用域。这篇文章将主要围绕bash这个shell来讲解环境配置文件，并结合shell的四种模式来说明这些配置文件的作用域。
 
 
-
-## 起因
-今天在公司准备使用命令行`sudo /opt/logstash/bin/plugin install logstash-output-webhdfs`给logstash安装logstash-output-webhdfs插件，以实现将logstash收集的日志信息存储到Hadoop文件系统这一目的。但是却一直提示如下错误：
-
-> Unable to download data from https://rubygems.org/ - 连接被对端重置 (https://rubygems.global.ssl.fastly.net/latest_specs.4.8.gz)  
-> ERROR: Installation aborted, verification failed for logstash-output-webhdfs
-
-这里公司上网环境是使用了代理。本人在~/.bashrc中添加了`export http_proxy=xxx`和`export https_proxy=xxx`。接下来按照网上的解决方法作了如下尝试，均已失败告终。  
-
-1. 用Google搜索错误提示[Unable to download data from https://rubygems.org][unable]
-2. [手动安装插件logstash-output-webhdfs][manual]
-
-## 必备知识
-1. Windows & Linux 环境变量设置  
-在windows系统里面，经常会遇到[设置环境变量][set_env]的问题，特别是安装完Java JDK之后。我们很少在黑漆漆的命令行窗口中执行命令`set path=%path%;D:\jdk\bin`,因为这样设置只会在这个命令窗口中能识别`java`命令在D:\jdk\bin目录里，重新打开一个命令窗口后将无法识别。也就是说该path只对执行那个命令的shell有效。还有两种方法是设置系统变量或用户变量。二者的区别就在于系统变量对所有用户有效，而用户变量只对当前用户有效。经试验，win8系统中二者都无需重启就可以起作用。同理，linux里面对环境变量的设置和windows是共通的。它也有三种方式
-    * 终端中设置
-    执行命令`PATH=$PATH':/home/hjy/program/jdk/bin'`,同样java命令只能在当前窗口中识别，重开一个窗口java命令将无效。
-    * 设置用户变量
-    linux里面关于用户变量的设置是在两个文件中，一个是/etc/profile，另一个是~/.profile。
-    * 设置系统变量
-    linux里面关于系统变量的设置是在/etc/environment文件中。
-
+## 简介
+我们知道linux系统中有很多shell，像最常用的bash，sh，zsh等。
 2. bashrc VS profile  
 我们知道bashrc和profile都是linux系统里面设置环境变量的地方，但是二者也是有区别的。
     * profile -- 配置shell  
