--- a/_posts/2015-09-08-刨根问底之shell里的运行环境.md
+++ b/_posts/2015-09-08-刨根问底之shell里的运行环境.md
@@ -3,6 +3,7 @@ layout:	default
 title:	刨根问底之shell里的运行环境
 category:	[Ubuntu, Shell]
 comments:	true
+published:	false
 ---
 在Ubuntu里，我们经常在终端中使用`sudo`来提权--以普通用户的身份去行使管理员的权限（前提是知道管理员用户的密码），这样减少了root用户的登录次数和管理时间，也提高了系统的安全性。不过有时候我们会直接用`su`切换到管理员进行一系列操作。本篇博文就是总结`sudo`，`su`对bash运行环境的影响。明白了这点，你将明白在公司里怎样使用代理。
 
