--- a/_posts/2015-09-08-shell运行环境之环境变量.md
+++ b/_posts/2015-09-08-shell运行环境之环境变量.md
@@ -14,13 +14,14 @@ comments:	true
 在windows系统里面，经常会遇到[设置环境变量][set_env]的问题，特别是安装完Java JDK之后。我们很少在黑漆漆的命令行窗口中执行命令`set path=%path%;D:\jdk\bin`,因为这样设置的变量是临时环境变量，它只能在这个命令窗口中被识别，知道`java`命令在D:\jdk\bin目录里，但当重新打开一个命令窗口（shell外壳）后那个窗口将无法识别。也就是说该path只对执行那个命令的shell有效。还有两种方法是设置用户变量或系统变量。二者的区别就在于系统变量对所有用户有效，而用户变量只对当前用户有效。经试验，win8系统中二者都无需重启就可以起作用。
 
 ## Linux 环境变量设置  
-其实，linux里面对环境变量的设置和windows是共通的。它也有三种方式
-    * 临时变量
-    在shell外壳中执行命令`PATH=$PATH':/home/hjy/program/jdk/bin'`,同样java命令只能在当前窗口中识别，重开一个外壳`java`命令将无效。
-    * 用户变量
-	linux里面关于用户变量的设置是在两个文件中，一个是/etc/profile，另一个是~/.profile。profile是配置的意思，是某个用户唯一用来设置环境变量的地方。针对不同的用户习惯，使用不同的shell（像bash，sh，zsh等），针对不同的功能或不同的应用，加载不同的环境变量文件。这部分将在[shell的运行环境之环境配置文件]({{site.baseurl}}/2015/09/09/shell运行环境之环境配置文件.html)里详细说明。
-    * 系统变量
-    linux里面关于系统变量的设置是在/etc/environment文件中。该环境变量的设置不需要加`export`，直接赋值即可。
+其实，linux里面对环境变量的设置和windows是共通的。它也有三种方式  
+
+* 临时变量  
+在shell外壳中执行命令`PATH=$PATH':/home/hjy/program/jdk/bin'`,同样java命令只能在当前窗口中识别，重开一个外壳`java`命令将无效。
+* 用户变量  
+Linux里面关于用户变量的设置是在两个文件中，一个是/etc/profile，另一个是~/.profile。profile是配置的意思，是某个用户唯一用来设置环境变量的地方。针对不同的用户习惯，使用不同的shell（像bash，sh，zsh等），针对不同的功能或不同的应用，加载不同的环境变量文件。这部分将在[shell的运行环境之环境配置文件]({{site.baseurl}}/2015/09/09/shell运行环境之环境配置文件.html)里详细说明。
+* 系统变量  
+Linux里面关于系统变量的设置是在/etc/environment文件中。该环境变量的设置不需要加`export`，直接赋值即可。
 
 ## 验证作用域
 易知临时变量的作用域只在当前的外壳中，出了当前外壳将失效。而对于用户变量和系统变量，我们这里做两个小的试验，其中一个是[网上][environment]的，关键是讲解中又是疑问又是否定的，没搞明白作者啥意思，所以这里亲自验证一下。
