--- a/_posts/2015-10-10-C语言编程之运算符.md
+++ b/_posts/2015-10-10-C语言编程之运算符.md
@@ -58,7 +58,7 @@ comments:	true
     }
     ```
 
-    根据下图输出的截图，我们发现运算的顺序是从右往左的。
+    根据下图输出的截图，我们发现运算的顺序是从右往左的。代码见[附件]({{site.baseurl}}/assets/attachs/selfinc.c.txt)。
 
     ![increasment]({{site.baseurl}}/assets/images/increasment.png)  
 
