--- a/_posts/2015-10-19-ML之线性回归.md
+++ b/_posts/2015-10-19-ML之线性回归.md
@@ -4,18 +4,33 @@ title:	ML之线性回归
 category:	[ML, Algorithm]
 comments:	true
 ---
-线性回归[Line Regression]估计是我们接触最早的机器学习的算法了，差不过在高中的时候我们就会做一类题：就是给定xy坐标上的一些点（一般是线性的），然后用y=ax+b进行拟合，最后求出一个<a,b>以及y的预测值$\hat{y}$。其中y=ax+b在ML中叫模型，<a,b>叫模型参数，或者特征x的权重，而y就是结果或标签，求解模型的方法叫最小二乘法[Ordinary Least Square Estimation]。本文将结合sklearning详细介绍一下线性回归方法。
+线性回归[Line Regression]估计是我们接触最早的机器学习的算法了，差不过在高中的时候我们就会做一类题：就是给定xy坐标上的一些点（一般是线性的），然后用$y=ax+b$进行拟合，最后求出一个$(a,b)$以及y的预测值$\hat{y}$。其中$y=ax+b$在ML中叫模型，$(a,b)$叫模型参数（回归系数），或者特征x的权重，而y就是结果或标签，求解模型的方法叫最小二乘法[Ordinary Least Square Estimation]。本文将结合sklearning详细介绍一下线性回归方法。
 
 
 ## 概念理解
-在统计学中，[线性回归][wiki_line_regression]是确定因变量$y$和一个或多个自变量$X$之间线性关系的统计分析方法。当自变量只有一个时叫简单线性回归，当自变量有多个时叫多维线性回归（与多变量线性回归的区别见QA1）。
+线性归是统计学里方法，“回归”一词的由来见下面的Tips。在统计学中，[线性回归][wiki_line_regression]是确定因变量$y$和一个或多个自变量$X$之间线性关系的统计分析方法。当自变量只有一个时叫简单线性回归，当自变量有多个时叫多维/多元线性回归（与多变量线性回归的区别见QA1）。
+
+> **Tips:回归的由来**  
+> 回归的方法是由达尔文的表兄弟Francis Galton发明的。Galton于这年完成了第一次回归预测，目的是根据上一代豌豆种子（双亲）的尺寸来预测下一代豌豆种子（孩子）的尺寸。他注意到如果双亲的高度比平均高度高，它们的子女也倾向于比平均高度高，但尚不及双亲。孩子的高度向着平均高度回退（回归）。Galton在多项研究上都注意到这个现象，所以尽管这个英文单词跟数值预测没有任何关系，但这种研究方法仍被称为回归。
 
 
+### 回归vs分类
 谈及回归，不可避免的谈到分类，这两个概念很相似，只不过分类的结果是1,2,3这样的离散型，而回归的结果却是连续型。二者都可以用来预测。
 
+## 问题描述
+给定一个随机样本集$(Y,X), Y=[y _ 1,\cdots,y _ n]^T, X=[\mathbf{1},X _ 1,\cdots,X _ n]^T,X _ i=[1,x _ {i1},\cdots,x _ {id}]$,其中ｎ是样本集的个数，ｄ是样本的维度．线性回归模型就是寻找这样的回归系数$W=[w _ 0,w _ 1,\cdots,w _d]^T$，使得代价函数$J(W)$尽可能的小．一般将平方误差作为代价，此时
+$$
+J(W)  =  (Y-XW)^T * (Y-XW)
+      =  \sum _ {i=1}^n (y _ i - X _ i*W)
+$$
 
-
-
+这里求代价函数$J(W)$最小值，可以通过对$W$求导，得到$X^T*(Y-XW)$，令其等于0，解出$W$如下：
+$$
+W=(X^T X)^{-1} X^T Y
+$$
+其具体的推导过程见下面的附录－多元线性回归的推导过程．
+> **Tips:**  
+> 上述公式中包含$(X^T X)^{-1}$
 
 
 
@@ -40,3 +55,8 @@ A：该回答参考[这篇英文博文][multiple_vs_multivariate]。
 [wiki_line_regression]:  https://en.wikipedia.org/wiki/Linear_regression
 [multiple_vs_multivariate]:  http://www.answers.com/Q/What_is_difference_between_multivariate_regression_and_multipal_regression
 [meachine_learning_70]:  http://share.weiyun.com/f33d5770eba223764845beddf0d6bc09
+
+
+## 附录
+### 多元线性回归的推导过程
+
