--- a/_posts/2012-12-02-货比三家之MacPro_MF840.md
+++ b/_posts/2012-12-02-货比三家之MacPro_MF840.md
@@ -1,11 +1,11 @@
 ---
 layout:		default
 title:		货比三家之MacPro_MF840
-category:	[Life]
+category:	[Life,Mac]
 comments:	true
 date:		2015-12-02 20:06:58
 ---
-在临近研究生毕业，即将走向社会之际，打算将吃饭的家伙--笔记本更新一下。上一任笔记本是联想的G450,还是我刚上大学时买的呢，已经陪伴了我六年之久，途中只升级了一下内存（1+1G变成1+4G）。用它编过程，学过Photoshop，玩过真三国无双。。。现在依然可以完美运作。不过这个笔记本有个致命的缺陷，就是太大，太笨重，而且电池只能待机10min，所以非常不适合随身携带。而Mac Pro能玩虐这两点。至于说系统的差异的话，因为现在习惯的工作环境是Ubuntu，所以对于基于linux内核的OS X应该没有啥压力。而且应该会搞个Ubuntu+OS X的双系统，对于windows再考虑考虑，就看玩游戏的决心。哈哈哈！
+在临近研究生毕业，即将走向社会之际，打算将吃饭的家伙--笔记本更新一下。上一任笔记本是联想的G450,还是我刚上大学时买的呢，已经陪伴了我六年之久，途中只升级了一下内存（1+1G变成1+4G）。用它编过程，学过Photoshop，玩过真三国无双。。。现在依然可以完美运作。不过这个笔记本有个致命的缺陷，就是太大，太笨重，而且电池只能待机10min，所以非常不适合随身携带。而Mac Pro能玩虐这两点。至于说系统的差异的话，因为现在习惯的工作环境是Ubuntu，所以对于基于linux内核的OS X应该没有啥压力。而且应该会搞个OS X+Ubuntu+Windows的三系统，毕竟Windows里的游戏还是戒不了哇！
 
 
 ## 硬件需求
@@ -56,7 +56,7 @@ date:		2015-12-02 20:06:58
 跟学弟了解一下流程。
 
 ## 结论
-官网情节没有必要，毕竟相差了1k+，更倾向于苹果去哪儿那家店吧，毕竟有实体店，可以现场去验证。对于国行还是港行，其实更偏向于港行吧，说实话，电脑不是那么容易出意外的，就像我之前的电脑，用了六年之久还没有问题。
+官网情节没有必要，毕竟相差了1k+，更倾向于苹果去哪儿那家店吧，毕竟有实体店，可以现场去验证。对于国行还是港行，其实更偏向于港行吧，说实话，电脑不是那么容易出意外的，就像我之前的电脑，用了六年之久还没有问题另外双12要来了，看看有没有折扣可以蹭吧。
 
 
 
