--- a/_posts/2015-10-19-ML之线性回归.md
+++ b/_posts/2015-10-19-ML之线性回归.md
@@ -18,7 +18,7 @@ comments:	true
 谈及回归，不可避免的谈到分类，这两个概念很相似，只不过分类的结果是1,2,3这样的离散型，而回归的结果却是连续型。二者都可以用来预测。
 
 ## 问题描述
-给定一个随机样本集$(Y,X), Y=[y _ 1,\cdots,y _ n]^T, X=[\mathbf{1},X _ 1,\cdots,X _ n]^T,X _ i=[1,x _ {i1},\cdots,x _ {id}]$,其中ｎ是样本集的个数，ｄ是样本的维度．线性回归模型就是寻找这样的回归系数$W=[w _ 0,w _ 1,\cdots,w _d]^T$，使得代价函数$J(W)$尽可能的小．一般将平方误差作为代价，此时
+给定一个随机样本集$(Y,X), Y=[y _ 1,\cdots,y _ n]^T, X=[X _ 1,\cdots,X _ n]^T,X _ i=[1,x _ {i1},\cdots,x _ {id}]$,其中ｎ是样本集的个数，ｄ是样本的维度．线性回归模型就是寻找这样的回归系数$W=[w _ 0,w _ 1,\cdots,w _d]^T$，使得代价函数$J(W)$尽可能的小．一般将平方误差作为代价，此时
 $$
 J(W)  =  (Y-XW)^T * (Y-XW)
       =  \sum _ {i=1}^n (y _ i - X _ i*W)
