--- a/_posts/2012-12-02-货比三家之MacPro_MF840.md
+++ b/_posts/2012-12-02-货比三家之MacPro_MF840.md
@@ -51,9 +51,26 @@ date:		2015-12-02 20:06:58
 >   港行机器只享有1年的联保时间，但仅限于苹果直营店，而国行机器享有1年的整机保修时间，2年的主要部件保修时间，除了苹果直营店，还可以找苹果售后服务站。
 
 6. [苹果团][pgt]  
-12月2号苹果团给出的价格是国行9010RMB（**便宜1778**），港行8710RMB（_比国行便宜300_）。
+很多人买苹果的产品都会选择苹果团，不过我从学弟了解了一下它的流程--联系客服，给出收货地址，付完款后等货到。其在里面充当的角色就是代购，优势是它比一般人更识货，能帮你承担买到假货的风险。12月2号苹果团给出的价格是国行9010RMB（**便宜1778**），港行8710RMB（_比国行便宜300_）。
 
-跟学弟了解一下流程。
+
+## [验货][check]
+这里的验货教程主要来自MrMac提供的验货说明。这里稍微做一下总结。
+
+1. 检查外包装是否有磕碰，并通过外包装和的条形码，找到SN号。
+    * 检查封装线（**条形码底部和两侧，顶部是没有的**）是否工整
+    * 检测封膜上的激光气孔(**8×6个**)  
+    ![qingkong]({{site.baseurl}}/assets/images/qikong.png)
+    * 盒子背面条形码是否是原标（**字迹清晰，淡黑色**）
+2. 到[官网AppleCare保修覆盖][sn_check]上查询SN的激活状态。（**提示“请验证产品的购买日期”**）
+3. 打开包装，拿出机器查看背面开有的SN号是否和第一步一致。
+    * 检查机器背面的一次性封装纸（**未被撕开，拆手顶部有圆点的设计，背面贴纸处于正中**）
+    * 背面的SN号是否一致
+4. 激活并设置好机器，检查机器内部SN号和电源
+    * 首次开机要选择语言
+    * 检查机器配置信息（**顶部配置信息**）
+    * 检查电池循环次数（**不能超过5次**）
+
 
 ## 结论
 官网情节没有必要，毕竟相差了1k+，更倾向于苹果去哪儿那家店吧，毕竟有实体店，可以现场去验证。对于国行还是港行，其实更偏向于港行吧，说实话，电脑不是那么容易出意外的，就像我之前的电脑，用了六年之久还没有问题另外双12要来了，看看有没有折扣可以蹭吧。
@@ -69,6 +86,10 @@ date:		2015-12-02 20:06:58
 4. [淘宝铺-苹果去哪儿][taobao]
 5. [苹果团][pgt]
 6. [苹果官网的售后服务][service]
+7. [MacPro验货说明][check]
+8. [官网AppleCare保修覆盖][sn_check]
+
+
 
 [apple]:    http://www.apple.com/cn/
 [app_edu]:  http://www.apple.com/cn/education/
@@ -77,5 +98,9 @@ date:		2015-12-02 20:06:58
 [taobao]:   https://item.taobao.com/item.htm?spm=a1z10.1-c.w5003-10369358660.1.e81MTQ&id=36240916857&scene=taobao_shop
 [pgt]:  http://www.appletuan.com/
 [service]:  http://www.apple.com/cn-k12/shop/browse/home/applecare
+[check]:    http://www.mrmac.cn/t/5
+[sn_check]: https://selfsolve.apple.com/agreementWarrantyDynamic.do
+
+
 
 
