--- a/_posts/2012-12-02-货比三家之MacPro_MF840.md
+++ b/_posts/2012-12-02-货比三家之MacPro_MF840.md
@@ -67,7 +67,7 @@ date:		2015-12-02 20:06:58
     * 检查机器背面的一次性封装纸（**未被撕开，拆手顶部有圆点的设计，背面贴纸处于正中**）
     * 背面的SN号是否一致
 4. 激活并设置好机器，检查机器内部SN号和电源
-    * 首次开机要选择语言
+    * 首次开机要选择语言（**翻新机不会看到**）
     * 检查机器配置信息（**顶部配置信息**）
     * 检查电池循环次数（**不能超过5次**）
 
