--- a/_posts/2012-12-02-货比三家之MacPro_MF840.md
+++ b/_posts/2012-12-02-货比三家之MacPro_MF840.md
@@ -73,7 +73,7 @@ date:		2015-12-02 20:06:58
 
 
 ## 结论
-官网情节没有必要，毕竟相差了1k+，更倾向于苹果去哪儿那家店吧，毕竟有实体店，可以现场去验证。对于国行还是港行，其实更偏向于港行吧，说实话，电脑不是那么容易出意外的，就像我之前的电脑，用了六年之久还没有问题。另外双12要来了，看看有没有折扣可以蹭吧。
+官网情节没有必要，毕竟相差了1k+，更倾向于苹果去哪儿那家店吧，毕竟有实体店，可以现场去验证。对于国行还是港行，其实更偏向于港行吧，说实话，电脑不是那么容易出意外的，就像我之前的电脑，用了六年之久还没有问题。另外双12要来了，看看有没有折扣可以蹭。
 
 
 
