--- a/_posts/2015-12-02-货比三家之MacPro_MF840.md
+++ b/_posts/2015-12-02-货比三家之MacPro_MF840.md
@@ -35,6 +35,10 @@ date:		2015-12-02 20:06:58
 
 3. [京东][jd]  
 京东由中国邮电器材Apple授权专营店销售，免费提供售后服务。其售价为10488RMB（**便宜300**），支持百条分期，有3期（3548/月,多付156），12期（926/月，多付624），24期（489/月，多付1248）。
+> Tips:促销**
+> 当碰到像双11或双12这样的促销活动便天飞的时候，还是可以考虑下手的，像今年京东双12推出每1000-100+满5000-200，这样就能以9288RMB入手这台MF840。外加京东百条这样的分期付款，对于目前想买手头又有点紧张的小伙伴绝对是上上之选。
+>
+
 4. [一号店][yhd]  
 售价为9888RMB（**便宜900**），不支持分期。提供有偿的摔碰管修1年（额外369RMB）。
 5. [苹果去哪儿][taobao]  
@@ -74,6 +78,9 @@ date:		2015-12-02 20:06:58
 
 ## 结论
 官网情节没有必要，毕竟相差了1k+，更倾向于苹果去哪儿那家店吧，毕竟有实体店，可以现场去验证。对于国行还是港行，其实更偏向于港行吧，说实话，电脑不是那么容易出意外的，就像我之前的电脑，用了六年之久还没有问题。另外双12要来了，看看有没有折扣可以蹭。
+
+
+事实证明，双12的折扣京东还是给的满满的，如果没有苹果内部员工的85折，我可能就直接从京东上面买了。最终入手的是通过内部员工的85折入手了我个人的第二部电脑。
 
 
 
