--- a/_posts/2015-12-02-货比三家之MacPro_MF840.md
+++ b/_posts/2015-12-02-货比三家之MacPro_MF840.md
@@ -35,7 +35,7 @@ date:		2015-12-02 20:06:58
 
 3. [京东][jd]  
 京东由中国邮电器材Apple授权专营店销售，免费提供售后服务。其售价为10488RMB（**便宜300**），支持百条分期，有3期（3548/月,多付156），12期（926/月，多付624），24期（489/月，多付1248）。
-> Tips:促销**
+> **Tips:促销**  
 > 当碰到像双11或双12这样的促销活动便天飞的时候，还是可以考虑下手的，像今年京东双12推出每1000-100+满5000-200，这样就能以9288RMB入手这台MF840。外加京东百条这样的分期付款，对于目前想买手头又有点紧张的小伙伴绝对是上上之选。
 >
 
