--- a/_posts/2014-02-29-shell编程之实用脚本片段.md
+++ b/_posts/2014-02-29-shell编程之实用脚本片段.md
@@ -10,7 +10,7 @@ comments:	true
 
 ## 校验参数
 
-1. 情景描述
+1. 情景描述  
 	有些脚本文件需要传入一些参数,那么就需要在脚本里对参数进行预处理,使得用户更好的使用该脚本.
 2. 脚本片段
 
@@ -23,9 +23,9 @@ comments:	true
 	fi
 	```
 
-## 等待后台程序执行
+## 等待程序执行
 
-1. 情景描述
+1. 情景描述  
 	编程中有些命令执行需要很耗时间和资源,需要提早运行.但是有时还需要等待该命令,对其结果进行进一步处理,此时就需要这样的代码段.
 2. 脚本片段
 
@@ -38,9 +38,9 @@ comments:	true
 	...
 	```
 
-## 提示用户输入参数
+## 提示用户输入
 
-1. 情景描述
+1. 情景描述  
 	智能提示,让shell脚本更加人性化.
 2. 脚本片段
 
@@ -50,9 +50,9 @@ comments:	true
 	echo $PW
 	```
 
-## 更改登录用户密码
+## 更改用户密码
 
-1. 情景描述
+1. 情景描述  
 	更改登录用户密码,懒得每次输入新旧密码
 2. 脚本片段
 
@@ -61,9 +61,9 @@ comments:	true
 	(echo "curpw"; sleep 1; echo "newpw"; sleep 1; echo "newpw") | passwd
 	```
 	
-## ACM检验程序
+## ACM检验
 
-1. 情景描述
+1. 情景描述  
 	ACM中需要对代码的测试数据进行验证.
 2. 脚本片段
 
@@ -81,3 +81,24 @@ comments:	true
 			break
 		fi
 	done
+
+
+## 跨系统脚本
+
+1. 情景描述  
+    对于不同的Linux发行版本，它们的包管理命令是不同的，比如ubuntu用apt-get命令他，centos用yum命令，mac系统用homebrew命令，但是它们都能运行shell脚本，所以shell脚本可以针对不同的发行版本安装不同的软件，以完成系统的配置。
+2. 脚本片段
+
+    ```bash
+    #！/bin/bash
+    if which apt-get > /dev/null; then
+        echo "You are using Ubuntu!"
+        sudo apt-get install-y git
+    elif which yum > /dev/null; then
+        echo "You are using CentOs!"
+        sudo yum install -y git
+    elif which brew > /dev/null; then
+        echo "You are using Mac OS X!"
+        brew install git
+    fi
+    ```
