--- a/_posts/2015-12-10-macbook常用软件及其管理.md
+++ b/_posts/2015-12-10-macbook常用软件及其管理.md
@@ -4,81 +4,147 @@ title:	macbook常用软件及其管理
 category:	[Mac, Software]
 comments:	true
 ---
-经过一番货比三家后，终于通过苹果内部员工的85折拿下了这款Macbook Pro MF840。今天怀着激动兴奋的心情，拆了配送包裹，好好把玩了一天。本篇博文对OS X系统内置的APP进行一些摸索，最后在系统中安装了VMWare Fusion虚拟机来搭建自己的Ubuntu工作环境。而下篇博文[macbook常用软件及其管理]()将详细介绍苹果系统的[软件包管理][homebrew]以及常用的软件。
+众所周知，基本上每个Unix系统的发行版本都有一个非常强大的软件包管理系统，它能够非常便利的管理系统中的软件，而且绝对纯净，绝壁不加任何插件，像Ubuntu里的apt，CentOS里的yum等。而Mac OS X是基于Unix的操作系统，可以安装大部分为Unix/Linux开发的软件。它也有非常好用的软件包管理系统Homebrew和Macports。
 
-## OS X系统
-苹果原生的系统还是很给力的，省电啥的还没有深刻体会，但是界面的美观，操作的流畅还是留下很深的印象。其内置的APP也是挺给力的，详细介绍见[Mac之妙][mac_app]，下面简要介绍一些。
+## 简介
+在Mac OS X系统中，除了Homebrew，还有其他的包管理系统，像MacPorts。之所以选择Homebrew是因为它尽可能地利用系统自带的各种库，使得软件包的编译时间大为缩短；同时由于几乎不会造成冗余，软件包的管理也清晰、灵活了许多。其另一个优势是使用Ruby定义软件包安装配置（叫做formula），定制非常简单。
 
-* 融入日常类
-    * 邮件  
-    集成iCloud，126和Gmail等常见的电子邮件服务。**赶快使用**
-    * 日历  
-    创建多个单独的日历来跟踪管理看似复杂却简单的日程。**赶快使用**
-    * 提醒事项  
-    相当于一个便笺，在特定的日期和时间提醒你该干什么。**赶快使用**
-    * 备忘录  
-    相当于一个随手笔记，可以随手记下闪现的灵感，还可以和Safari，照片和地图等APP联合使用。功能方面和印象笔记有点类似。**赶快使用**
-    * 通讯录  
-    它可以配合信息/FaceTime/邮件等使用。非常方便。**赶快使用**
-    * 信息/FaceTime  
-    Apple设备之间通信的工具，分别对应文本图片和音频视频。**跟微信/QQ有的一拼**
-    * iBooks  
-    Mac上用来看书的工具，书的排版没得说，缺陷就是书源少要收费。**可以和iKindle组合使用**
-    * 地图  
-    怎么说呢，甩百度两条街吧，配合它的触摸板，完美。**赶快使用**
-* 重点研究类
-    * automator[crontab]/脚本编辑器
-    自动执行常用任务，这个是日后重点研究的工具。**重点研究**
-    * 照片  
-    该应用除了让图库的管理更加轻松，可以添加位置信息，还可以批量更改图片信息等。最关键的是可以和强大且易用的编辑工具（PS/Gimp）配合使用。**重点研究**
-    * iMovie  
-    和照片的的功能类似，不过处理的对象是视频。**等图片摸透再了解吧**
-    * GarageBand  
-这次的对象是音频，可以玩转音乐。**目前只想听听歌，码码代码**
-* 打入冷宫型
-    * Pages/Numbers/Keynote  
-    分别对应Office里面的Word/Excel/PowerPoint，但是却兼容它们。**基本被Tex取代，只用来查看Office文档**
-    * App Store  
-    它的功能和Ubuntu里的软件中心类似，不过作为一个码农，还是打算将软件的管理通过命令来来维护。 **基本被HomeBrew取代**
-    * Safari  
-    苹果内置的浏览器。**完全被Chrome取代，可以打入冷宫**
-    * iTunes  
-    Mac上的娱乐大本营，可以听歌看电影。缺陷就是片源少还要钱。**基本被XBMC取代**
-* 不常用但实用型
-    * 活动监视器[任务管理器]
-    * 数码测色计[取色板]
-    * 迁移助理  
-    支持Mac-Mac，PC-Mac，TimeMachine-Mac快速迁移文件。
-    * 钥匙串访问  
-    安全存储你使用的所有密码
-
-## 更新&设置
-1. 系统更新  
-可能你当前的系统的并不是最新版本，所以进入系统后第一件事情就是联网，然后到APP Store里把系统和软件更新到最新版本。更新的同时可以了解苹果系统。
-
-2. 偏好设置  
-    * 触控版[学习触控版的手势]
-    * 鼠标滚轮方向[取消自然的滚动方向]
-
-## 虚拟机[VMware fusion][vmware]
-原因很简单，苹果的硬件+苹果的软件才能组合成最佳的性能，多系统对于Macbook而言就是对硬件资源的浪费。虽说Mac支持Windows，但对于我而言，Windows只剩下游戏值得我流连忘返。我的工作环境现在只有Ubuntu，在熟悉OS X系统的过程中，Ubuntu应该还是主要的工作场所吧。所以虚拟机还是不可以少的。至于为啥用VMware fusion，原因如下：
+> **Tips:Macports**
+> Macports的工作方式是下载source code，然后在本地编译。其理念是尽量减少对系统现有库的依赖，所以第一次用macport要很长时间，但好处是更新Mac OS不会破坏你现有的package。Macports安装所有的package到/opt/local下面，这样不会和系统现有的/usr/local有冲突。
+>
+> 如果你是重量级的Linux用户，希望使用所有的open source package，哪买macports是不二选择，如果只是希望很快的安装一些便利的工具，那么homebrew更好点。前段时间，由于系统自带的python和brew安装的python产生了冲突，所以感觉我更适合macports。哈哈哈
+>
 
 
-4. 软件管理[HomeBrew][homebrew]
+## 安装
+1. 安装Xcode  
+    前面说过Homebrew会尽可能利用系统自带的各种库，所以要在安装brew前把系统的各种库补全。顺便把Xcode的文档也安装了。
 
+    ```sh
+    # 安装xcode
+    xcode-select --install
+    ```
+2. 包管理软件
+    * [brew][brew]&&[brew cask][cask] 
+        
+        1. 安装
+        
+         ```sh
+         # 安装brew，目前是这个地址，具体以官网为准
+         ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+         # 安装brew cask
+         brew tap caskroom/cask
+         brew update && brew upgrade
+         ```
+        2. 使用(以wget为例)
+        
+        ```sh
+        # 查找软件包
+        brew search wget
+        # 安装软件包
+        brew install wget
+        # 列出已安装的软件包
+        brew list
+        # 删除软件包
+        brew remove wget
+        # 查看软件包信息
+        brew info wget
+        # 列出软件包的依赖关系
+        brew deps wget
+        # 更新brew
+        brew update
+        # 列出过时的软件包（已安装但不是最新版本）
+        brew outdated
+        # 更新过时的软件包（全部或指定）
+        brew upgrade 或 brew upgrade wget
+        ```
+    > **Tips:brew和brew cask的区别**  
+    > 上面介绍了`brew`的用法，而`brew cask`的用法基本和`brew`一样，就是将`brew`替换成`brew cask`。  
+> 二者的区别是`brew`侧重于软件套件和软件环境的配置安装，而`brew cask`则偏向mac平台上图形化软件的安装。具体的体现是brew一般都是下载源码，解压，然后 `./configure && make install` ，同时会包含相关依存库，并自动配置好各种环境变量，而且易于卸载。 这样就能快速安装和升级本地的各种开发环境。而`brew cask`是已经编译好了的应用包（.dmg/.pkg），仅仅是下载解压，放在统一的目录中（/opt/homebrew-cask/Caskroom），省掉了自己去下载、解压、拖拽（安装）等蛋疼步骤，同样，卸载相当容易与干净。这个对一般用户来说会比较方便，包含很多在AppStore里没有的常用软件。
+    > 
 
+    * [Macports][macports]
+        1. 安装  
+        有两种方式，第一种是通过`brew cask`安装，另一种是源码编译安装。
+        ```sh
+        # 快速安装
+        brew bask install macports
+        # 源码编译安装
+        wget https://distfiles.macports.org/MacPorts/MacPorts-2.3.4.tar.gz
+        tar zxvf MacPorts-2.3.4.tar.gz
+        cd MacPorts-2.3.4
+        ./configure && make &&sudo  make install
+        sudo echo "export PATH=/opt/local/bin:$PATH" >> /etc/profile
+        sudo echo "export PATH=/opt/local/sbin:$PATH" >> /etc/profile
+        sudo port -v selfupdate
+        ```
+        2. 使用(以wget为例)  
+        
+        ```sh
+        # 查找软件包
+        port search wget
+        # 安装软件包
+        port install wget
+        # 列出已安装的软件包
+        port list
+        # 删除软件包
+        port uninstall wget
+        # 查看软件包信息
+        port info wget
+        # 列出软件包的依赖关系
+        port deps wget
+        # 更新port
+        port -v selfupdate
+        # 列出过时的软件包（已安装但不是最新版本）
+        port outdated
+        # 更新过时的软件包（全部或指定）
+        port upgrade outdated
+        ```
 
-1. 联网  
-	后面所有的操作都依赖于网络。
-2. 更新语言包以及软件更新器  
-	安装时建议用英语,一方面安装过程更快一些,另一方面保持通用文件夹为英文名(命令行操作更方便快捷).此时更新时需要安装中文语言包，大概有400M左右的应用需要升级到最新。
 3. 安装日常所用软件  
-	常用软件可以直接在软件中心中查找安装,不过建议是用shell脚本[ubuntukylin_install.sh]({{ site.baseurl }}/assets/attachs/ubuntukylin_install.sh.txt)安装.
-	
+	常用软件可以直接在APP Store（软件重要但比较少）查找安装,也可以通过网上的dmg软件包（软件多但安全性要自己斟酌）安装，不过建议是用shell脚本[mac_install.sh]({{ site.baseurl }}/assets/attachs/mac_install.sh.txt)安装(通过Homebrew管理，软件多而且安全性绝对保障，最关键的是可以定制化批量安装).
+    
+    1. octave
 
-		```bash
-		# 安装chrome浏览器
-		sudo apt-get install chromium-browser
+        ```bash
+        # homebrew添加第三方工具包
+        brew tap homebrew/science
+        # 更新brew&&更新过时的软件包
+        brew update && brew upgrade
+        # 一款媲美matlab的科学计算工具 
+        brew install octave
+        ```
+    2. vim
+    3. data science[python]
+        
+        ```sh
+        # python
+        brew install python --framework
+        # numpy
+        brew install homebrew/python/numpy
+        # scipy
+        brew install homebrew/python/scipy
+        # matplotlib
+        brew install homebrew/python/matplotlib
+        # scikit-learn--机器学习的库
+        pip install -U scikit-learn
+        # Theano--深度学习的库
+        pip install Theano
+        # 
+
+        ```
+    4. launchrocket
+    LaunchRocket是一个管理brew安装的service的工具，安装之后可以看所有的service的运行状态。
+
+        ```sh
+        brew tap jimbojsb/launchrocket
+        brew cask install launchrocket
+        ```
+
+
+    5. 嘻嘻、xx
+        ```sh
+        sudo apt-get install chromium-browser
 		# 安装在线视频播放插件
 		sudo apt-get install pepperflashplugin-nonfree
 		```
@@ -190,11 +256,10 @@ comments:	true
 ## 待续
 	
 ## 参考文献
-1. [Mac之妙，秒在它能帮你做到的一切][mac_app]
-2. [WMWare Fusion 8 Pro中文版][vmware]
-3. [homebrew官网][homebrew]
+3. [homebrew官网][brew]
+2. [brew cask官网][cask]
+3. [MacPorts官网][macports]
 
-
-[mac_app]:  http://www.apple.com/cn/osx/apps/
-[vmware]:   http://www.iplaysoft.com/vmware-fusion.html
-[homebrew]: http://brew.sh
+[brew]:     http://brew.sh/index_zh-cn.html
+[cask]:     http://caskroom.io/
+[macports]: https://www.macports.org/
