--- a/_posts/2015-12-10-macbook常用软件及其管理.md
+++ b/_posts/2015-12-10-macbook常用软件及其管理.md
@@ -103,6 +103,31 @@ comments:	true
 3. 安装日常所用软件  
 	常用软件可以直接在APP Store（软件重要但比较少）查找安装,也可以通过网上的dmg软件包（软件多但安全性要自己斟酌）安装，不过建议是用shell脚本[mac_install.sh]({{ site.baseurl }}/assets/attachs/mac_install.sh.txt)安装(通过Homebrew管理，软件多而且安全性绝对保障，最关键的是可以定制化批量安装).
     
+    1. atom
+    黑客级别的文本编辑器。
+
+        ```sh
+        brew install Caskroom/cask/atom
+        ```
+    2. neteasemusic
+    网易云音乐，一款主打歌单的听歌软件。
+    
+        ```sh
+        brew install Caskroom/cask/neteasemusic
+        ```
+    3. google-chrome
+    Google浏览器chrome，插件流。
+        
+        ```sh
+        brew install Caskroom/caskgoogle-chrome
+        ```
+    4. QQ
+    当下国内主流交际软件。
+
+        ```sh
+        brew install Caskroom/cask/qq
+        ```
+
     1. octave
 
         ```bash
