--- a/_posts/2015-12-10-macbook常用软件及其管理.md
+++ b/_posts/2015-12-10-macbook常用软件及其管理.md
@@ -121,6 +121,8 @@ comments:	true
         ```sh
         brew install Caskroom/caskgoogle-chrome
         ```
+        > **注意:**   
+        > 安装完成后,需要登陆google帐号,可以同步书签并扩展应用
     4. QQ
     当下国内主流交际软件。
 
@@ -164,30 +166,19 @@ comments:	true
         brew tap jimbojsb/launchrocket
         brew cask install launchrocket
         ```
+    5. python集成环境PyCharm
 
-
-    5. 嘻嘻、xx
         ```sh
-        sudo apt-get install chromium-browser
-		# 安装在线视频播放插件
-		sudo apt-get install pepperflashplugin-nonfree
-		```
-		
-		> **注意:**   
-		> 安装完成后,需要登陆google帐号,可以同步书签并扩展应用
+        brew cask install pycharm
+        ```
+        > **Tips:破解**  
+        > 在注册时选择`License server，填 http://idea.lanyus.com ，然后点击 OK.
+
 	2. 安装gcc编译环境
 
 		```bash
 		sudo apt-get install build-essential
 		```
-	3. 安装osdlyrics,以方便rhythmbox显示歌词
-		
-		```bash
-		sudo apt-get install osdlyrics
-		```
-		
-		> **注意:**  
-		> 安装完成,需要启动osdlyrics并设置其自动启动的播放器
 	4. 安装starDict字典
 		
 		```bash
@@ -210,12 +201,6 @@ comments:	true
 		```bash
 		sudo apt-get install p7zip-full
 		```
-	6. 安装文本编辑器geany
-		
-		```bash
-		sudo apt-get install geany
-		```
-	7. 安装视频播放器VLC
 		
 		```bash
 		sudo apt-get install vlc
