--- a/_posts/2015-06-07-搭建自己的博客.md
+++ b/_posts/2015-06-07-搭建自己的博客.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: markdown+jekyll+github搭建博客
+title: 搭建自己的博客
 category: [Ubuntu, Markdown,  Jekyll, Github, Blog]
 comments: true
 ---
