--- a/_posts/2015-12-10-macbook常用软件及其管理.md
+++ b/_posts/2015-12-10-macbook常用软件及其管理.md
@@ -173,84 +173,12 @@ comments:	true
         ```
         > **Tips:破解**  
         > 在注册时选择`License server，填 http://idea.lanyus.com ，然后点击 OK.
+    6. java开发
 
-	2. 安装gcc编译环境
+        ```sh
+        brew cask install java
+        ```
 
-		```bash
-		sudo apt-get install build-essential
-		```
-	4. 安装starDict字典
-		
-		```bash
-		sudo apt-get install stardict
-		```
-		
-		> **安装软件所需要的字典和发音包**  
-		> 
-		> 1. [下载](http://share.weiyun.com/39678cb7bef4a4ad0be537f10578be2d)字典和发音包
-		> 2. 命令安装
-		>
-		>	```bash
-		>	cd stardict
-		>	chmod 755 installDicts.sh installPron.sh
-		>	sudo ./installDicts.sh
-		>	sudo ./installPron.sh
-		>	```
-	5. 安装压缩工具p7zip
-		
-		```bash
-		sudo apt-get install p7zip-full
-		```
-		
-		```bash
-		sudo apt-get install vlc
-		```
-	8. 安装位图图像处理软件gimp
-
-		```bash
-		sudo apt-get install gimp
-		```
-	9. 安装专业画图软件dia
-		
-		```bash
-		sudo apt-get install dia
-		sudo apt-get install dia-gnome
-		```
-	10. 安装tex软件
-		
-		```bash
-		sudo apt-get install texlive-full
-		sudo apt-get install texlive-fonts-recommended
-		sudo apt-get install texmaker
-		```
-
-		> **安装win下的字体**  
-		> 
-		> 1. [下载](http://share.weiyun.com/b298e1e21a18cf7278b4d8005aecfe7d)win字体和安装脚本
-		> 2. 命令安装
-		>
-		>	```bash
-		>	cd addWinFonts
-		>	chmod 755 addWinFonts.sh
-		>	sudo ./addWinFonts.sh
-		>	```
-	11. 安装java集成环境Eclipse
-		
-		```bash
-		sudo apt-get install eclipse
-		sudo apt-get install eclipse-jdt
-		sudo apt-get install eclipse-pde
-		```
-	12. 安装python集成环境idle
-
-		```bash
-		sudo apt-get install idle-python2.7
-		```
-		
-			```bash
-			sudo dpkg -i wine-qqintl_0.1.3-2_i386.deb
-			sudo apt-get -f install
-			```
 
 ## 待续
 	
